ru/zh translation fixes

--- a/manual/ru/blender/Animation.html
+++ b/manual/ru/blender/Animation.html
@@ -35,7 +35,7 @@
     Ключевые кадры анимации могут быть добавлены в Blender стандартным путём: Object > Animation > Insert Keyframe... menu (или при нажатии горячей клавиши *I*), после этого, на временной шкале выбирается другой кадр, объект перемещается/вращается/масштабируется и добавляется новый ключевой кадр для этих изменений.
     </p>
 
-    <img src="files/animation-blender/insert-keyframe.jpg" alt="Inserting keyframes in Verge3D for Blender" class="centered" style="max-width: 1000px">
+    <img src="files/animation-blender/insert-keyframe.jpg" alt="Inserting keyframes in Verge3D for Blender" class="centered">
 
 
     <p>Ознакомьтесь со следующим обучающим видео:</p>
@@ -52,7 +52,7 @@
     Прискиннивание объекта в Blender выполняется с использованием <a href="https://docs.blender.org/manual/ru/latest/animation/armatures/index.html" target="_blank">Armature</a>. Verge3D поддерживает максимум 4 веса на одну кость (взаимодействовать с костью будут только 4 веса с самым большим значением влияния, остальные будут проигнорированы). Кости могут быть анимированы в *Pose Mode* (Ctrl+Tab), используя Pose > Animation > Insert Keyframe... menu (или горячая клавиша *I*), после чего, на временной шкале выбирается другой кадр, кость перемещается/вращается/масштабируется и с данными изменениями добавляется новый ключевой кадр.
     </p>
 
-    <img src="files/animation-blender/skeletal-animation.jpg" alt="Inserting keyframes for skeletal animation in Verge3D for Blender" class="centered" style="max-width: 1000px">
+    <img src="files/animation-blender/skeletal-animation.jpg" alt="Inserting keyframes for skeletal animation in Verge3D for Blender" class="centered">
 
 
     [anchor:Shape_Key_Animation]
@@ -80,7 +80,7 @@
     В отличие от Blender, в Verge 3D можно анимировать только определённый параметр материала, подключив к нему ноду *Value* или *RGB*. 
     </p>
 
-    <img src="files/animation-blender/node-material-animation.jpg" alt="Node material animation in Verge3D for Blender" class="centered" style="max-width: 1000px">
+    <img src="files/animation-blender/node-material-animation.jpg" alt="Node material animation in Verge3D for Blender" class="centered">
 
     <p>
     Значения цветов заданные этими нодами могут быть анимированы в Blender нажатием ПКМ на соответсвующую ноду (или при наведении на него курсора и нажатии горячей клавиши *I*), затем выбирается другой кадр на временной шкале, устанавливается новое значение или цвет, которым добавляется анимационный ключ.
@@ -97,7 +97,7 @@
     Вместо того, чтобы проигрывать анимацию созданную в Blender, вы можете использовать Puzzles или JavaScript чтобы изменить координаты или другие параметры. В особенности <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle (основанный на Tween.js library) является удобным способом создания собственной анимации на лету.
     </p>
 
-    <img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="Using the animate param puzzle to create animation in Verge3D for Blender" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="Using the animate param puzzle to create animation in Verge3D for Blender" class="centered">
 
 
 
@@ -148,7 +148,7 @@
     Меню переключения интерполяции между ключевыми кадрами вызывается нажатием ПКМ в окне временной шкалы в Blender (горячая клавиша *T*).
     </p>
 
-    <img src="files/animation-blender/interpolation.jpg" alt="Keyframe interpolation in Verge3D for Blender" class="centered" style="max-width: 1000px">
+    <img src="files/animation-blender/interpolation.jpg" alt="Keyframe interpolation in Verge3D for Blender" class="centered">
 
     <p>
     Verge 3D поддерживет все режимы интерполяции доступные в Blender.
@@ -174,7 +174,7 @@
     Вы можете использовать <b>animation puzzles</b> для воспроизведения предварительно созданной анимации (для получения более подробной информации пройдите по <a href="manual/ru/puzzles/Animation.html">ссылке</a>).
     </p>
 
-    <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered">
 
     <p>
     Анимация также может быть реализована с использованием других блоков Puzzles - смотрите <a href="manual/ru/puzzles/Camera.html">Camera</a> и <a href="manual/ru/puzzles/Time.html">Time</a> puzzles.
