--- a/manual/ru/blender/Installation.html
+++ b/manual/ru/blender/Installation.html
@@ -46,13 +46,13 @@
       В Win 10 существует известная проблема, когда Windows Defender может отказать в запуске установщика (мы работаем над этим). Если вы видите синее окно с предупреждением, как на картинке ниже, нажмите ссылку *More info*:
     </p>
 
-    <img src="files/installation-blender/windows-installer-warning.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/installation-blender/windows-installer-warning.jpg" class="centered">
 
     <p>
       и затем нажмите кнопку *Run anyway*:
     </p>
 
-    <img src="files/installation-blender/windows-installer-warning2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/installation-blender/windows-installer-warning2.jpg" class="centered">
 
     <p>
       Выберите папку для установки (или лучше оставьте ее по умолчанию). Убедитесь, что у вас достаточно разрешений на чтение и запись для этой папки. Установка в системный каталог, такой как «Program Files» или «Desktop», не рекомендуется.
@@ -74,7 +74,7 @@
       Начиная с версии 2.17, вы также можете запустить менеджер приложений без запуска Blender, щелкнув значок на рабочем столе или используя меню «Пуск».
     </p>
 
-    <img src="files/installation-blender/desktop-shortcuts.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/installation-blender/desktop-shortcuts.jpg" class="centered">
 
 
     [anchor:Installation_for_macOS_or_Linux]
@@ -89,7 +89,7 @@
       В Blender вызовите окно *Preferences*, выбрав соответствующую опцию в меню *Edit*.
     </p>
 
-    <img src="files/installation-blender/installation_blender280_step1.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/installation-blender/installation_blender280_step1.jpg" class="centered">
 
     <p>
       На вкладке *File Paths* найдите поле *Scripts* и укажите в нем папку, в которой установлен Verge3D. Закройте окно *Preferences* и <i> перезапустите Blender </i>.
