--- a/manual/ru/blender/Material-Library.html
+++ b/manual/ru/blender/Material-Library.html
@@ -74,7 +74,7 @@
     ...выберите материал и нажмите кнопку *Append from Library*.
     </p>
 
-    <img src="files/mat-library-blender/append-material4.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/mat-library-blender/append-material4.jpg" class="centered">
 
     <p>
     Как только материал будет добавлен, у вас появится возможность назначить его для своей модели. Выберите модель, перейдите во вкладку *Material*, нажмите на маленькую кнопку рядом с названием материала (или рядом с кнопкой *New*, если у модели нет назначенного материала) и выберите из списка добавленный материал.
@@ -112,7 +112,7 @@
     Большинство шейдеров предлагают наборы входных данных, путем настройки которых вы можете создать уникальный материал, подходящий под ваши нужды.
     </p>
 
-    <img src="files/mat-library-blender/material-settings.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/mat-library-blender/material-settings.jpg" class="centered">
 
     <p>
     Кроме того, в материале имеются специальные входы для удобного подключения карты нормалей и АО.
@@ -164,7 +164,7 @@
     Если какие-то текстуры, используемые в *blend* файле утеряны, внизу экрана появится соответствующее жёлтое предупреждение.
     </p>
 
-    <img src="files/mat-library-blender/texture-file-paths4.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/mat-library-blender/texture-file-paths4.jpg" class="centered">
 
 
 
