--- a/manual/ru/introduction/AR-VR-development.html
+++ b/manual/ru/introduction/AR-VR-development.html
@@ -57,13 +57,13 @@
 
     <p>Взаимодействие с 3D-объектами осуществляется с помощью прицельного указателя на основе взгляда, автоматически предоставляемого для VR-устройств <i>без контроллеров</i></p>
 
-    <img src="files/ar-vr-development/gaze-based-reticle-pointer.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/ar-vr-development/gaze-based-reticle-pointer.jpg" class="centered">
 
     <p>
       Для VR-устройств <i>с контроллерами</i> взаимодействие осуществляется с помощью виртуального луча, отбрасываемого контроллерами.
     </p>
 
-    <img src="files/ar-vr-development/google-daydream-vr-controller.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/ar-vr-development/google-daydream-vr-controller.jpg" class="centered">
 
     <p>
       Вы можете использовать стандартные пазлы <a href="manual/ru/puzzles/Events.html#when_hovered">при наведении</a> или <a href="manual/ru/puzzles/Events.html#when_clicked">при нажатии</a> для захвата пользовательских действий, а также специфические для VR <a href="manual/ru/puzzles/AR_VR.html#session_event">события при сеансе</a>.
