--- a/manual/ru/introduction/App-Manager.html
+++ b/manual/ru/introduction/App-Manager.html
@@ -28,7 +28,7 @@
       App Manager — это классический сайт, отображаемый локальным веб-сервером, наподобие панели настроек WiFi роутера.
     </p>
 
-    <img src="files/app-manager/app-manager-main.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-main.jpg" class="centered">
 
     <p>
       Доступ осуществляется по адресу <a href="http://localhost:8668/" target="_blank">localhost:8668</a>. Вы можете переходить со страницу на страницу, обновлять их или добавлять в закладки. Сам сервер запускается несколькими способами (см. ниже).
@@ -55,7 +55,7 @@
 
     <p>Локальный веб-сервер можно запустить без Blender, 3ds Max или Maya. Просто щелкните значок на рабочем столе, созданный установщиком Verge3D (только для Windows). Страница App Manager откроется в веб-браузере.</p>
 
-    <img src="files/app-manager/app-manager-desktop-icon.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-desktop-icon.jpg" class="centered">
 
     <p>
       Если веб-сервер уже запущен (например из 3D-редактора), данное приложение просто откроет App Manager в браузере.
@@ -153,7 +153,7 @@
       Здесь перечислены все файлы, которые доступны для запуска. Вы также можете фильтровать приложения, используя строку поиска.
     </p>
 
-    <img src="files/app-manager/app-manager-app-page.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-app-page.jpg" class="centered">
 
 
 
@@ -209,7 +209,7 @@
       ...или на панели справа в окне приложения.
     </p>
 
-    <img src="files/app-manager/app-manager-run-puzzles-from-app-page.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-run-puzzles-from-app-page.jpg" class="centered">
 
     <p>
     Больше информации по пазлам найдете <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html">здесь</a>.
@@ -231,7 +231,7 @@
     ... или же используйте ее дубликат на панели справа в окне приложения.
     </p>
 
-    <img src="files/app-manager/app-manager-open-folder-from-app-page.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-open-folder-from-app-page.jpg" class="centered">
 
     <p>
       Эта операция вызовет файловый менеджер, который установлен в системе по умолчанию (для Windows - классический проводник).
@@ -253,7 +253,7 @@
     ...или по ее аналогу на правой панели в окне приложения.
     </p>
 
-    <img src="files/app-manager/app-manager-publish-from-app-page.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-publish-from-app-page.jpg" class="centered">
 
     <p>
       Начнется загрузка приложения в Verge3D Network. Это позволит получить к нему доступ онлайн (действие может быть отменено).
@@ -275,7 +275,7 @@
       Вы также можете использовать кнопки социальных сетей и генератор QR-кода.
     </p>
 
-    <img src="files/app-manager/app-manager-publish-qrcode.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-publish-qrcode.jpg" class="centered">
 
     <p>
       Загруженные файлы можно просмотреть или удалить на странице Network Directory.
@@ -291,7 +291,7 @@
       Вы можете загрузить приложение в виде архива zip, используя кнопку на правой панели на странице приложения.
     </p>
 
-    <img src="files/app-manager/app-manager-upload-archive-from-app-page.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-upload-archive-from-app-page.jpg" class="centered">
 
     <p>
       Программа сожмет ваши файлы и загрузит архив в Verge3D Network (операция может быть отменена). Используйте эту возможность для передачи контента вашим коллегам, клиентам или другим разработчикам Verge3D.
@@ -330,7 +330,7 @@
     Аналогичная кнопка также появится на странице приложения.
     </p>
 
-    <img src="files/app-manager/app-manager-update-from-app-page.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-update-from-app-page.jpg" class="centered">
 
     <p>
     Больше информации по обновлению вы найдете <a href="manual/ru/introduction/Updating.html">здесь</a>.
@@ -352,7 +352,7 @@
     ... или по аналогичной на странице приложения.
     </p>
 
-    <img src="files/app-manager/app-manager-delete-from-app-page.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-delete-from-app-page.jpg" class="centered">
 
     <p>
     Приложение будет удалено в Корзину с возможностью ее восстановления.
