--- a/manual/ru/introduction/Asset-compression.html
+++ b/manual/ru/introduction/Asset-compression.html
@@ -67,7 +67,7 @@
       Сжатые <strong>.xz</strong> файлы (например, <i>my_awesome_app.gltf.xz</i> и <i>my_awesome_app.bin.xz</i>) должны появиться рядом с оригинальными. Осталось только включить их загрузку в вашем приложении. Для этого перейдите в раздел Пазлы...
     </p>
 
-    <img src="files/beginner_guide/app-manager-app-buttons-puzzles.png" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/app-manager-app-buttons-puzzles.png" class="centered">
 
     </p>
     ...и переключитесь на вкладку <strong>init</strong>: 
