--- a/manual/ru/introduction/Facebook-3D-Posts.html
+++ b/manual/ru/introduction/Facebook-3D-Posts.html
@@ -37,13 +37,13 @@
       Чтобы выполнить экспорт в <strong>3ds Max</strong>, перейдите в меню Verge3D и выберите "Export Facebook GLB...".
     </p>
 
-    <img src="files/facebook-3d-posts/export-glb-max1.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/facebook-3d-posts/export-glb-max1.jpg" class="centered">
 
     <p>
       В появившемся диалоговом окне файла выберите путь экспорта и нажмите *Сохранить*.
     </p>
 
-    <img src="files/facebook-3d-posts/export-glb-max2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/facebook-3d-posts/export-glb-max2.jpg" class="centered">
 
 
     <p><a href="manual/ru/introduction/Facebook-3D-Posts.html#Export_GLB_Blender" id="Export_GLB_Blender" class="permalink">#</a></p>
@@ -54,7 +54,7 @@
       Чтобы выполнить экспорт в <strong>Blender</strong>, перейдите в "File > Export" и выберите опцию "Facebook GLB (.glb)". Общий вариант GLB-экспорта "Verge3D glTF Binary (.glb)" также подойдет, но с его помощью на выходе мы получим немного менее оптимизированные файлы.
     </p>
 
-    <img src="files/facebook-3d-posts/export-glb-blender.png" class="centered" style="max-width: 1000px">
+    <img src="files/facebook-3d-posts/export-glb-blender.png" class="centered">
 
 
     <p><a href="manual/ru/introduction/Facebook-3D-Posts.html#Compose_3D_Post_in_Facebook" id="Compose_3D_Post_in_Facebook" class="permalink">#</a></p>
@@ -65,13 +65,13 @@
       Теперь вы можете просто перетащить файл GLB в свой пост на Facebook.
     </p>
 
-    <img src="files/facebook-3d-posts/post-fb.png" class="centered" style="max-width: 1000px">
+    <img src="files/facebook-3d-posts/post-fb.png" class="centered">
 
     <p>
       В композиторе поста Facebook вы также можете выбрать фон по своему вкусу.
     </p>
 
-    <img src="files/facebook-3d-posts/3d-post-example.png" class="centered" style="max-width: 1000px">
+    <img src="files/facebook-3d-posts/3d-post-example.png" class="centered">
 
     <p>
       Посмотрите, как это выглядит на Facebook: <a href="https://www.facebook.com/soft8soft/posts/2003080113280076" target="_blank">ссылка</a>. Исходный файл для этой модели можно найти в Verge3D в папке "applications" (см. ниже в разделе "Starter files").
@@ -86,7 +86,7 @@
       Мы предоставляем образец проекта Verge3D, в котором настроены необходимые параметры экспорта как для 3ds Max, так и для Blender. Стартовый проект содержит точно такую же карту окружения, которая используется в Facebook для максимальной согласованности.
     </p>
 
-    <img src="files/facebook-3d-posts/facebook-ready-asset-file-blender.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/facebook-3d-posts/facebook-ready-asset-file-blender.jpg" class="centered">
 
     <p>
       Его можно найти внутри <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">дистрибутива</a> Verge3D, расположенного в "applications/fb_max" (3ds Max) или "applications/fb" (Blender).
