--- a/manual/ru/introduction/HTML-based-user-interfaces.html
+++ b/manual/ru/introduction/HTML-based-user-interfaces.html
@@ -57,7 +57,7 @@
         Посмотрите на следующий пример (демонстрация Verge3D <a href="https://cdn.soft8soft.com/demo/applications/teapot_heater_max/index.html" target="_blank">Teapot Heater</a>): весь интерфейс построен с помощью стороннего программного обеспечения для веб-дизайна и сохранен как <i>index.html</i> (это имя не является обязательным). Помимо HTML-элементов интерфейса, файл <i>index.html</i> содержит элемент <strong>iframe</strong>, в который встроен проект Verge3D - <i>teapot_heater.html</i>.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/layered-html.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/layered-html.jpg" class="centered">
 
     <p>
         В Verge3D App Manager такой составной проект имеет два значка запуска, которые можно использовать для независимого запуска чистого проекта Verge3D или собранного приложения:
@@ -184,7 +184,7 @@
         На этом этапе мы можем сгенерировать наш файл UI <strong>.html</strong> и попробовать его в приложении Verge3D. Нажмите кнопку с угловыми скобками (<strong>Export Code</strong>) в верхней части...
     </p>
 
-    <img src="files/HTML-based-user-interfaces/webflow-export-code.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/webflow-export-code.jpg" class="centered">
 
     <p>
     ...затем нажмите <strong>Prepare ZIP</strong> и наконец, <strong>Download ZIP</strong>:
@@ -246,13 +246,13 @@
     Once you launched this software, select <strong>Create new file</strong>...
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-create-new.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-create-new.jpg" class="centered">
 
     <p>
     ...then select <strong>HTML</strong> on the left panel and fill out all the fields: <strong>Name</strong> (e.g. "my_awesome_app_gwd"), <strong>Location</strong> (use any path, yet preferably <i>out</i> of your app folder to avoid confusion with the published version) and <strong>Title</strong> (e.g. "My Awesome App"), and click <strong>OK</strong>.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-create-new2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-create-new2.jpg" class="centered">
 
     <p class="note">
     At first run, if you didn't maximize the window at startup and maximized it later, the newly created blank document may appear small. Use the *Viewport Resize* tool and drag the document corner to make it bigger or even fullscreen.
@@ -263,25 +263,25 @@
     Let's start by adding the <strong>iframe</strong> element for embedding our Verge3D app's main launching file, <i>my_awesome_app.html</i>. In Google Web Designer this can be done by dragging the <strong>IFrame</strong> component out from the list under the <strong>Components</strong> tab.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-add-iframe.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-add-iframe.jpg" class="centered">
 
     <p>
     After the <strong>IFrame</strong> component is placed on the page, switch to the <strong>Properties</strong> tab and make your <strong>iframe</strong> element occupy the entire page by specifying zeroes for the left and top positions and 100% for the width and height. Also, in the <strong>Source</strong> field put the path to Verge3D app main file - "my_awesome_app.html" (assuming that we'll be publishing our UI file in the root of the app folder).
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-add-iframe2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-add-iframe2.jpg" class="centered">
 
     <p>
     At this stage we can generate our UI <strong>.html</strong> file and try it with the Verge3D app. Click the <strong>Publish</strong> button in the top-right corner and select <strong>Locally</strong>.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-publish.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-publish.jpg" class="centered">
 
     <p>
     In the publishing dialog select the path to the <strong>verge3d/applications</strong> folder as <strong>Location</strong>. Use the name of your application folder, <strong>my_awesome_app</strong>, in the <strong>Name</strong> field in order to save the files right in its root.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-publish2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-publish2.jpg" class="centered">
 
     <p>
     As a result, several new files will be added to your application folder, including *index.html* and some scripts.
