--- a/manual/ru/introduction/Puzzles-Visual-Logic-Editor.html
+++ b/manual/ru/introduction/Puzzles-Visual-Logic-Editor.html
@@ -31,7 +31,7 @@
       Verge3D Puzzles - мощный, но простой в использовании инструмент для создания сценариев поведения. С помощью пазлов вы можете сделать свой 3D-контент интерактивным с реакцией на действия пользователя.
     </p>
 
-    <img src="files/puzzles-editor/puzzles-editor-dark.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles-editor/puzzles-editor-dark.jpg" class="centered">
 
     <p>
       Если вы не программист (дизайнер, маркетолог, инженер, преподаватель…) –  этот инструмент значительно расширит ваши возможности. Даже если вы опытный кодер, то наверняка найдете его полезным как в прототипировании, так и в производстве.
@@ -58,7 +58,7 @@
     ... или же аналогичную на правой панели страницы приложения.
     </p>
 
-    <img src="files/app-manager/app-manager-run-puzzles-from-app-page.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/app-manager/app-manager-run-puzzles-from-app-page.jpg" class="centered">
 
 
 
@@ -74,7 +74,7 @@
       На панели слева (toolbox) располагаются пазлы сгруппированные по назначению. Основная часть (workspace) — это рабочее пространство для создания логических конструкций. Также в окне присутствует область предпросмотра 3D сцены (viewport), которую вы можете перетаскивать, масштабировать, скрывать, ставить на паузу рендеринг и следить за FPS.
     </p>
 
-    <img src="files/puzzles-editor/layout.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles-editor/layout.jpg" class="centered">
 
     <p>
       Кнопки <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html#Controls">управления</a> редактором расположены на нижней панели. Вверху отображаются вкладки (по умолчанию называются  <i>init</i> и <i>main</i>).
@@ -128,7 +128,7 @@
       Щелкните по этой кнопке, чтобы запустить пазлы. Система обработает пазлы во всех вкладках редактора, создаст необходимый код JavaScript и запустит приложение в браузере.
     </p>
 
-    <img src="files/puzzles-editor/controls-run.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles-editor/controls-run.jpg" class="centered">
 
     <p>
       В большинстве случаев, вы можете несколько раз нажимать кнопку запуска, чтобы применить изменения в редакторе. Тем не менее, в некоторых случаях, стоит обновить страницу браузера, чтобы выполнить чистый запуск со сбросом всех значений по умолчанию. Не забудьте перед этим сохранить свои изменения!
@@ -142,7 +142,7 @@
       Эта кнопка сохраняет ваши пазлы. Аналогично функции запуска, будет генерироваться код JavaScript из имеющихся пазлов (все вкладки редактора) и сохраняться в папке приложения в виде файлов *visual_logic.xml* and *visual_logic.js*. При этом перезапуска вашего приложения не произойдет.
     </p>
 
-    <img src="files/puzzles-editor/controls-save.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles-editor/controls-save.jpg" class="centered">
 
     <p>
       Функция сохранения требует, чтобы локальный сервер разработки был запущен. Сервер запускается автоматически с первым экземпляром Blender, 3ds Max или Maya, но если он по какой-то причине не работает, при попытке сохранить пазлы будет отображаться ошибка подключения:
@@ -218,7 +218,7 @@
       Добавляет комментарий к пазлу. Комментарий представлен в виде кнопки со знаком вопроса, при нажатии на которую открывается окно комментария. Комментарий можно постоянно сохранять как в открытом, так и в закрытом состоянии.
     </p>
 
-    <img src="files/puzzles-editor/puzzles-editor-right-click-menu-add-comment.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles-editor/puzzles-editor-right-click-menu-add-comment.jpg" class="centered">
 
     <p>
       Комментарий можно удалить, выбрав * Remove Comment * в контекстном меню.
@@ -244,7 +244,7 @@
       Группу пазлов можно свернуть, чтобы сделать ее более компактной.
     </p>
 
-    <img src="files/puzzles-editor/puzzles-editor-right-click-menu-collapse-expand.gif" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles-editor/puzzles-editor-right-click-menu-collapse-expand.gif" class="centered">
 
 
 
