--- a/manual/ru/introduction/Updating.html
+++ b/manual/ru/introduction/Updating.html
@@ -32,7 +32,7 @@
       Загрузите и распакуйте свежий дистрибутив Verge3D в новую папку с тем же именем (то есть «verge3d»).
     </p>
 
-    <img src="files/updating/files-backup.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/updating/files-backup.jpg" class="centered">
 
     <p>
       Используя одно и тоже название папки, вы можете избежать повторной настройки путей в выбранном 3D-редакторе.
@@ -86,7 +86,7 @@
       Скопируйте файлы <strong> .max </strong> или <strong> .blend </strong>, все текстуры/звуки и файл сценария пазлов <strong> visual_logic.xml </strong> из старой папки приложения в новую (созданная папка приложения находится в <strong> verge3d/applications </strong>). Перезапишите файлы, когда вас об этом попросят. Если вы использовали пользовательский интерфейс на основе HTML в своем приложении, скопируйте также все соответствующие файлы.
     </p>
 
-    <img src="files/updating/files-copy.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/updating/files-copy.jpg" class="centered">
 
     <p>
       В конце, вы должны выполнить экспорт в glTF. Если вы использовали пазлы в своем приложении, вам необходимо повторно сохранить сценарий в редакторе пазлов, чтобы сгенерированный код соответствовал новейшей версии движка.
