--- a/manual/ru/introduction/Using-JavaScript.html
+++ b/manual/ru/introduction/Using-JavaScript.html
@@ -54,7 +54,7 @@
         объекты сцены менять свой материал по щелчку мыши:
     </p>
 
-    <img src="files/using-javascript/basics-exec-script-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/using-javascript/basics-exec-script-example.jpg" class="centered">
 
 
 
@@ -101,7 +101,7 @@ function runCode(app) {
         Теперь, если вы сохраните <strong>.js</strong> файл и запустите свое приложение, вы заметите... ничего, пока не откроете консоль браузера. Она обычно открывается клавишей F12 (Chrome, Firefox в Windows, Linux). На Mac используйте меню View > Developer > JavaScript Console (Option-Cmd-J) в Chrome или меню Develop > Show Error Console (Option-Cmd-C) в Safari.
     </p>
 
-    <img src="files/using-javascript/basics-console-log.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/using-javascript/basics-console-log.jpg" class="centered">
 
     <p>
         С помощью кода вы можете изменить что-то в сцене, например, переместить дефолтный куб Verge3D (названный "Box001" в 3ds Max и "Cube" в Blender)...
@@ -125,13 +125,13 @@ function runCode(app) {
 }
     </code>
 
-    <img src="files/using-javascript/basics-change-material.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/using-javascript/basics-change-material.jpg" class="centered">
 
     <p>
         Посмотрите <a href="https://cdn.soft8soft.com/demo/examples/index.html" target="_blank">примеры кода Verge3D</a>, чтобы вдохновиться. Нажмите кнопку <strong>View source</strong>, чтобы открыть код.
     </p>
 
-    <img src="files/using-javascript/basics-code-examples.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/using-javascript/basics-code-examples.jpg" class="centered">
 
 
 
@@ -207,7 +207,7 @@ function runCode() {
     </p>
 
 
-    <img src="files/using-javascript/get-inspired-by-puzzles.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/using-javascript/get-inspired-by-puzzles.jpg" class="centered">
 
     <p>
         Таким образом, вы можете получить рабочий пример того, как работают определенные методы JavaScript API, и повторно использовать сгенерированный сниппет для интересующего вас пазла в собственном коде.
