--- a/manual/ru/max/Animation.html
+++ b/manual/ru/max/Animation.html
@@ -75,7 +75,7 @@
       Вместо того чтобы воспроизводить анимацию, заранее созданную в 3ds Max, вы можете использовать пазлы или JavaScript для изменения координат или некоторых других параметров связанных со временем. В частности, пазл <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> (основанный на библиотеке Tween.js) является удобным способом создания собственной анимации на лету.
     </p>
 
-    <img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="Using the animate param puzzle to create animation in Verge3D for 3ds Max" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="Using the animate param puzzle to create animation in Verge3D for 3ds Max" class="centered">
 
 
     [anchor:playback_options]
@@ -192,7 +192,7 @@
       Вы можете использовать <strong>animation puzzles</strong> для воспроизведения предварительно созданной анимации (для получения более подробной информации пройдите по <a href="manual/ru/puzzles/Animation.html">ссылке</a>).
     </p>
 
-    <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered">
 
     <p>
       Анимация также может быть реализована с использованием других блоков Puzzles - смотрите пазлы <a href="manual/ru/puzzles/Camera.html">Camera</a> и <a href="manual/ru/puzzles/Time.html">Time</a>.
