--- a/manual/ru/max/Beginners-Guide.html
+++ b/manual/ru/max/Beginners-Guide.html
@@ -54,7 +54,7 @@
       Еще одним преимуществом использования менеджера приложений является то, что у вас всегда будет работающее веб-приложение, которое вы можете запускать / перезагружать в браузере без необходимости сначала переходить к файлам сцены. 
     </p>
 
-    <img src="files/beginners-guide-max/app-manager-main.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginners-guide-max/app-manager-main.jpg" class="centered">
 
     <p>
       Менеджер приложений открывается в веб-браузере при нажатии кнопки *App Manager*. Будет запущен системный браузер по умолчанию (вы можете изменить его в настройках вашей ОС). Будет работать любой современный браузер, но мы рекомендуем последнюю версию <a href="https://www.google.com/chrome/" target="_blank">Google Chrome</a>, которая является быстрой, совместима со стандартами и предлагает хорошие инструменты для веб-разработки. 
@@ -94,7 +94,7 @@
       После загрузки новое приложение отображает только куб. Вы можете вращать сцену, удерживая нажатой левую кнопку мыши и изменять масштаб с помощью колесика мыши. 
     </p>
 
-    <img src="files/beginners-guide-max/app-manager-app-running.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginners-guide-max/app-manager-app-running.jpg" class="centered">
 
     <p class="note">
       Если вместо куба отображается что-то вроде «This site can’t be reached», это означает, что сервер разработки не работает, вероятно, из-за того, что вы случайно закрыли первый запущенный экземпляр вашего 3D-редактора и сервер разработки вместе с ним. В этом случае вам следует запустить Blender или, если программа уже запущена, снова запустить App Manager. 
@@ -160,19 +160,19 @@
       Нажмите кнопку *Puzzles* рядом с названием приложения в менеджере приложений. Это запустит ваше приложение с прикрепленным к нему редактором пазлов. 
     </p>
 
-    <img src="files/beginners-guide-max/puzzles-editor.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginners-guide-max/puzzles-editor.jpg" class="centered">
 
     <p>
       Слева расположена панель инструментов с некоторыми категориями ("Events", "Selectors", "Objects" и т.д.). Категории открываются щелчком мыши, показывая пазлы, которые вы можете перетащить в рабочую область. Соединяя <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html">различные пазлы</a> между собой, вы можете создавать сценарии поведения 3D объектов с реакцией на действия пользователя.
     </p>
 
-    <img src="files/beginner_guide/puzzles-toolbox.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/puzzles-toolbox.jpg" class="centered">
 
     <p>
       Чтобы потренироваться для начала, перетащите пазл *when clicked* из категории *Events* и пазл *select an object* из *Selectors*
     </p>
 
-    <img src="files/beginner_guide/puzzles-toolbox2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/puzzles-toolbox2.jpg" class="centered">
 
     <p>
       После объединения, приложение будет ждать клика пользователя по объекту, который был указан в раскрывающемся меню (например, "Cube"). При этом никакого действия в ответ происходить не будет, пока вы не добавите что-то в слот *do*. 
@@ -190,13 +190,13 @@
       Теперь, когда пользователь кликнет по 3D объекту, он исчезнет. Нажмите кнопку *Run*, чтобы запустить программу. Для проверки, щелкните по кубу.
     </p>
 
-    <img src="files/beginner_guide/puzzles-run.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/puzzles-run.jpg" class="centered">
 
     <p>
       Чтобы сделать сценарий постоянной частью приложения, обязательно сохраните его.
     </p>
 
-    <img src="files/beginner_guide/puzzles-save.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/puzzles-save.jpg" class="centered">
 
     <p>
       Закончив с пазлами, вы можете запустить интерактивное приложение, используя синюю иконку в App Manager.
@@ -259,7 +259,7 @@
 
     <img src="files/beginners-guide-max/license-key-example.jpg" class="centered" style="max-width: 900px">
 
-    <img src="files/beginners-guide-max/app-manager-license-activation.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginners-guide-max/app-manager-license-activation.jpg" class="centered">
 
 
     <p>
