--- a/manual/ru/max/Installation.html
+++ b/manual/ru/max/Installation.html
@@ -95,31 +95,31 @@
       Запустите 3ds Max и выберите "Configure System Paths..." в разделе "Customize" в строке главного меню.
     </p>
 
-    <img src="files/installation_3ds_max/installation_3ds_max1.png" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/installation_3ds_max1.png" class="centered">
 
     <p>
       В версии 2020 он называется  "Configure User and System Paths...".
     </p>
 
-    <img src="files/installation_3ds_max/installation_3ds_max1-2020.png" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/installation_3ds_max1-2020.png" class="centered">
 
     <p>
       Перейдите на вкладку "3rd Party Plug-ins" и нажмите кнопку "Add...".
     </p>
 
-    <img src="files/installation_3ds_max/installation_3ds_max2.png" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/installation_3ds_max2.png" class="centered">
 
     <p>
       Перейдите в папку, в которой установлен Verge3D, а затем в папку "max_plugin" внутри нее. Нажмите "Use Path".
     </p>
 
-    <img src="files/installation_3ds_max/installation_3ds_max3.png" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/installation_3ds_max3.png" class="centered">
 
     <p>
       Нажмите "OK" и перезапустите 3ds Max.
     </p>
 
-    <img src="files/installation_3ds_max/installation_3ds_max4.png" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/installation_3ds_max4.png" class="centered">
 
 
 
@@ -136,7 +136,7 @@
       В некоторых редких случаях меню Verge3D может не отображаться в строке главного меню, даже если вы настроили путь к плагину и снова открыли 3ds Max. Чтобы зарегистрировать меню вручную, перейдите в раздел *Утилиты*, нажмите *MaxScript* и выберите *Verge3D* в выпадающем меню. Затем нажмите *Register Verge3D menu*.
     </p>
 
-    <img src="files/installation_3ds_max/installation_3ds_max-registering_manually.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/installation_3ds_max-registering_manually.jpg" class="centered">
 
     [anchor:verge3d_props_missing]
 
