--- a/manual/ru/max/Materials-Maps-Reference.html
+++ b/manual/ru/max/Materials-Maps-Reference.html
@@ -44,13 +44,13 @@
       *Physical* материалы - мощный инструмент для визуализации поверхностей модели в Verge3D. Для их создания обычно требуется настройка карты окружения (она есть в сцене куба по умолчанию). Быстро проверить работу *Physical* материалов можно на ART-рендере во вьюпорте 3ds Max или в Verge3D с помощью опции меню *Sneak Peek*.
     </p>
 
-    <img src="files/materials-maps-reference-max/physical-material.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/physical-material.jpg" class="centered">
 
     <p>
       *Physical* материалы используются в большинстве демо-версий Verge3D, таких как Scooter, Industrial Robot, Load Unload и др.
     </p>
 
-    <img src="files/materials-maps-reference-max/physical-material-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/physical-material-example.jpg" class="centered">
 
     Дополнительные сведения о материале *Physical* см. на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-809B9123-21A2-443E-A7A4-0DAB70410B8D" target="_blank">Autodesk</a>
 
@@ -63,13 +63,13 @@
     *Standard* материал проще *Physical* и обеспечивают лучшую производительность при рендеринге в реальном времени. Обычно они требуют установки некоторого освещения, хотя они будут работать и на сценах без освещения благодаря источникам света, автоматически предоставляемым 3ds Max (которые воспроизводятся Verge3D). Материалы *Standard* можно быстро проверить, используя рендер Scanline во вьюпорте 3ds Max или в Verge3D с помощью опции меню *Sneak Peek*.
     </p>
 
-    <img src="files/materials-maps-reference-max/standard-material.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/standard-material.jpg" class="centered">
 
     <p>
       *Standard* материалы используются, например, в демо Дополненной Реальности Verge3D и игре Farmer's Journey для всех ассетов.
     </p>
 
-    <img src="files/materials-maps-reference-max/standard-material-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/standard-material-example.jpg" class="centered">
 
     Дополнительные сведения о материале *Standard* см. на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-78973040-1D59-491E-8440-30B786641AD0" target="_blank"></a>Autodesk</a>.
 
@@ -82,13 +82,13 @@
       Этот компонент смешивает два материала с помощью маски или коэффициента.
     </p>
 
-    <img src="files/materials-maps-reference-max/blend-material.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/blend-material.jpg" class="centered">
 
     <p>
       *Blend* часто используется для подмешивания запеченной карты окклюзии к материалу, чтобы удалить любое освещение с затененной поверхности.
     </p>
 
-    <img src="files/materials-maps-reference-max/blend-material-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/blend-material-example.jpg" class="centered">
 
     Дополнительную информацию о материале *Blend* можно найти на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-D2B59023-7D53-4E86-804F-7A037E787055" target="_blank">Autodesk</a>.
 
@@ -102,13 +102,13 @@
       Этот компонент используется для назначения нескольких материалов различным частям одного и того же объекта.
     </p>
 
-    <img src="files/materials-maps-reference-max/multi-sub-object-material.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/multi-sub-object-material.jpg" class="centered">
 
     <p>
       В следующем примере два *Physical* материала, окрашенная сталь и матовый хром, назначены одному и тому же объекту колеса в разных местах:
     </p>
 
-    <img src="files/materials-maps-reference-max/multi-sub-object-material-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/multi-sub-object-material-example.jpg" class="centered">
 
     Дополнительные сведения о материале *Multi/Sub-Object* см. на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-D968CDD9-4C5D-489D-A311-ED7486FCD4AA" target="_blank">Autodesk</a>.
 
@@ -128,13 +128,13 @@
       Эта карта назначает изображение для использования в качестве текстуры в материалах.
     </p>
 
-    <img src="files/materials-maps-reference-max/bitmap-map.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/bitmap-map.jpg" class="centered">
 
     <p>
       Пример использования можно увидеть ниже:
     </p>
 
-    <img src="files/materials-maps-reference-max/bitmap-map-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/bitmap-map-example.jpg" class="centered">
 
     Смотрите дополнительную информацию о карте *Bitmap* на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-A1654CD2-2A7C-42A6-816D-28F7A849F96F" target="_blank">Autodesk</a>.
 
@@ -148,13 +148,13 @@
       Эта карта обеспечивает текстуру нормалей для материалов.
     </p>
 
-    <img src="files/materials-maps-reference-max/normal-bump-map.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/normal-bump-map.jpg" class="centered">
 
     <p>
       Пример использования можно увидеть ниже:
     </p>
 
-    <img src="files/materials-maps-reference-max/normal-bump-map-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/normal-bump-map-example.jpg" class="centered">
 
     Смотрите дополнительную информацию о карте *Normal Bump* на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-BFFFC7F4-8B39-435C-9015-A38245A3250B" target="_blank">Autodesk</a>.
 
@@ -168,13 +168,13 @@
       Эта карта создает градиент различных видов.
     </p>
 
-    <img src="files/materials-maps-reference-max/gradient-ramp-map.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/gradient-ramp-map.jpg" class="centered">
 
     <p>
       В следующем упрощенном примере для покрытия фоновой модели используется *Gradient Ramp*.
     </p>
 
-    <img src="files/materials-maps-reference-max/gradient-ramp-map-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/gradient-ramp-map-example.jpg" class="centered">
 
     Смотрите дополнительную информацию на карте *Gradient Ramp* на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-08436626-73A4-4246-BD26-1F151C141B0E" target="_blank">Autodesk</a>.
 
@@ -188,13 +188,13 @@
       Эта карта изменяет цвет входной карты.
     </p>
 
-    <img src="files/materials-maps-reference-max/color-correction-map.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/color-correction-map.jpg" class="centered">
 
     <p>
       *Color Correction* может использоваться для извлечения компонентов окклюзии, шероховатости и металличности, упакованных в R, G, B каналы одной текстуры (она же ORM текстура), или для извлечения любых других масок, упакованных в одну текстуру по причинам оптимизации памяти и размера файла.
     </p>
 
-    <img src="files/materials-maps-reference-max/color-correction-map-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/color-correction-map-example.jpg" class="centered">
 
     Смотрите дополнительную информацию на карте *Color Correction* на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-77E1EA94-76CA-4A66-AD3E-27AED8FB7A8A" target="_blank">Autodesk</a>.
 
@@ -208,13 +208,13 @@
       Эта карта накладывает входные карты друг на друга.
     </p>
 
-    <img src="files/materials-maps-reference-max/composite-map.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/composite-map.jpg" class="centered">
 
     <p>
       В следующем упрощенном примере *Composite* используется для объединения локальной карты окклюзии с картой окклюзии всего объекта путем перемножения.
     </p>
 
-    <img src="files/materials-maps-reference-max/composite-map-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/composite-map-example.jpg" class="centered">
 
     Смотрите дополнительную информацию о карте *Composite* на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-850CFCCD-2DF9-4FC9-85F7-9A92AE0C0297" target="_blank">Autodesk</a>.
 
@@ -228,13 +228,13 @@
       Эта карта объединяет 2 входные карты или цвета с помощью коэффициента смешивания.
     </p>
 
-    <img src="files/materials-maps-reference-max/mix-map.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/mix-map.jpg" class="centered">
 
     <p>
       *Mix* можно использовать, например, для добавления маскированных цветов к материалам или для переключения между вариантами материалов в анимированном переходе.
     </p>
 
-    <img src="files/materials-maps-reference-max/mix-map-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/mix-map-example.jpg" class="centered">
 
     Смотрите дополнительную информацию о карте *Mix* на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-824EF321-B018-45DF-954A-93BDD0A6A696" target="_blank"></a>Autodesk</a>.
 
@@ -248,13 +248,13 @@
       Эта карта предоставляет сплошные цвета или растровые изображения с гамма-коррекцией.
     </p>
 
-    <img src="files/materials-maps-reference-max/color-map.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/color-map.jpg" class="centered">
 
     <p>
       *Color Map* предпочтительнее использовать в тех случаях, когда необходимо задать один и тот же цвет в нескольких местах для обеспечения согласованности. В следующем примере *Color Map* используется как маскированный *Base Color* и как входной *Emission Color* материала.
     </p>
 
-    <img src="files/materials-maps-reference-max/color-map-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/color-map-example.jpg" class="centered">
 
     Смотрите дополнительную информацию о *Цветовой карте* на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-51AF0DA9-A591-41CB-BABE-B6105816E13F" target="_blank">Autodesk</a>.
 
@@ -268,13 +268,13 @@
       Эта карта обеспечивает раскраску вершин для использования в материалах.
     </p>
 
-    <img src="files/materials-maps-reference-max/vertex-color-map.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/vertex-color-map.jpg" class="centered">
 
     <p>
       Пример использования можно увидеть ниже:
     </p>
 
-    <img src="files/materials-maps-reference-max/vertex-color-map-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/vertex-color-map-example.jpg" class="centered">
 
     Смотрите дополнительную информацию о карте Vertex Color на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-2701B80A-9335-4E45-859F-11D5EC1CB76B" target="_blank"></a>Autodesk</a>.
 
@@ -294,7 +294,7 @@
       *Controllers* используются в 3ds Max для обеспечения анимированных входов, которые могут быть подхвачены Verge3D в качестве анимации. Кроме того, Verge3D имеет средства для изменения значения *Controller* с помощью пазлов (<a href='manual/ru/puzzles/Materials.html#materials_set_color'>установить цвет</a> или <a href='manual/ru/puzzles/Materials.html#materials_set_value'>установить значение</a>) или с помощью JavaScript.
     </p>
 
-    <img src="files/materials-maps-reference-max/controllers.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/controllers.jpg" class="centered">
 
     <p>
       Выбор того, какой *Controller* использовать, зависит от того, можно ли соединить его с нужным входом. Как правило, вы можете использовать *RGB/RGBA/Point3/Point4 Controllers* для цветов и *Float Controllers* для значений.
@@ -310,19 +310,19 @@
       В 3ds Max *Controllers* могут быть подключены только к так называемым *Additional Params* материала или карты. По умолчанию *Additional Params* скрыты, поэтому их нужно сначала показать с помощью меню правой кнопки мыши:
     </p>
 
-    <img src="files/materials-maps-reference-max/controllers-additional-params.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/controllers-additional-params.jpg" class="centered">
 
     <p>
       В следующем примере контроллер *Bezier RGBA Color* подключен к входу *Base Color Map* материала *Physical* через *Color Map* (также может быть подключен напрямую без *Color Map*).
     </p>
 
-    <img src="files/materials-maps-reference-max/controllers-example.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/controllers-example.jpg" class="centered">
 
     <p>
       В результате появляется возможность изменить цвет материала с помощью пазла <a href='manual/ru/puzzles/Materials.html#materials_set_color'>set color</a>. Для этого вставьте пазл <a href='manual/ru/puzzles/Selectors.html#select_material'>material selector</a> и выберите название материала в его выпадающем меню. Затем выберите название карты с контроллером в выпадающем меню пазла *set color*.
     </p>
 
-    <img src="files/materials-maps-reference-max/controllers-example-puzzles.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/controllers-example-puzzles.jpg" class="centered">
 
 
 
@@ -334,13 +334,13 @@
       *Controller* можно анимировать с помощью <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-1026A4FF-5827-4306-8E28-00812550FB4C" target="_blank">standard 3ds Max methods</a>. В следующем примере к контроллеру *Bezier RGBA Color* были добавлены ключи анимации для обеспечения плавного перехода цвета.
     </p>
 
-    <img src="files/materials-maps-reference-max/controllers-example-animation-keys.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/controllers-example-animation-keys.jpg" class="centered">
 
     <p>
       Анимацию можно быстро проверить с помощью функции *Sneak Peek* в Verge3D. После экспорта сцены появляется возможность управлять анимацией с помощью <a href='manual/ru/puzzles/Animation.html'>Puzzles</a> или JavaScript.
     </p>
 
-    <img src="files/materials-maps-reference-max/controllers-example-animation-puzzles.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/materials-maps-reference-max/controllers-example-animation-puzzles.jpg" class="centered">
 
     Смотрите дополнительную информацию о *Контроллерах* на сайте <a href="https://help.autodesk.com/view/3DSMAX/2020/ENU/?guid=GUID-C1828D93-F764-4F9C-92AB-A5C0BB20831E" target="_blank">Autodesk</a>.
 
