--- a/manual/ru/max/Morphing.html
+++ b/manual/ru/max/Morphing.html
@@ -34,7 +34,7 @@
       Во время рендеринга движок выбирает 6 морф-целей с наибольшим влиянием, игнорируя все избыточные морф-цели.
     </p>
 
-    <img src="files/morphing-max/morpher-modifier.jpg" alt="Morphing in Verge3D for 3ds Max" class="centered" style="max-width: 1000px">
+    <img src="files/morphing-max/morpher-modifier.jpg" alt="Morphing in Verge3D for 3ds Max" class="centered">
 
 
     [anchor:controlling_with_puzzles]
