--- a/manual/ru/max/Viewport-Render-Preview.html
+++ b/manual/ru/max/Viewport-Render-Preview.html
@@ -80,7 +80,7 @@
       Впоследствии вы можете использовать кнопку *Render* для повторного рендеринга:
     </p>
 
-    <img src="files/viewport-render-preview/render-settings4.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/viewport-render-preview/render-settings4.jpg" class="centered">
 
 
     [anchor:ActiveShade_Mode]
