--- a/manual/ru/puzzles/Advanced.html
+++ b/manual/ru/puzzles/Advanced.html
@@ -44,7 +44,7 @@
         <li><b>PROC</b> - доступ к пазлам процедур</li>
     </ul>
 
-    <img src="files/puzzles/puzzles-advanced-exec-script.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-advanced-exec-script.jpg">
 
     <p><b>Особенности использования встроенных модулей для вкладки "Init" и других вкладок</b></p>
     <ul>
