--- a/manual/ru/puzzles/Logic.html
+++ b/manual/ru/puzzles/Logic.html
@@ -16,7 +16,7 @@
     Эти пазлы предоставляют условные выражения для выполнения различных вычислений или действий в зависимости от того, выполняется ли условие.
     </p>
 
-    <img src="files/puzzles/puzzles-logic.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic.jpg">
 
     <h2>Содержание</h2>
 
@@ -36,13 +36,13 @@
     С помощью этих пазлов вы можете реализовать разветвление (поток управления) в своих пазлах.
     </p>
 
-    <img src="files/puzzles/puzzles-logic-if-else.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-if-else.jpg">
 
     <p>
     Предположим, в вашей сцене есть куб и сфера. Когда пользователь кликает по сфере, вы хотите скрыть ее, но <i>только если пользователь уже щелкал по кубу</i>. Такой сценарий можно легко реализовать с помощью <a href="manual/ru/puzzles/Variables.html">переменной</a> для запоминания, был ли куб когда-либо кликнут:
     </p>
 
-    <img src="files/puzzles/puzzles-logic-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-example.jpg">
 
     <p>
     Иногда необходимо <a href="manual/ru/puzzles/Logic.html#comparison">сравнить</a> переменную с несколькими значениями, и поэтому требуется больше ветвей. В этом случае вы можете расширить пазл *if*, нажав на значок шестеренки и перетащив дополнительные слоты: *elseif* или *else*.
@@ -54,7 +54,7 @@
     В результате вы сможете заполнить вновь созданные слоты любыми действиями, которые должны произойти в вашем сценарии:
     </p>
 
-    <img src="files/puzzles/puzzles-logic-example4.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-example4.jpg">
 
 
 
@@ -66,19 +66,19 @@
     Этот пазл сравнивает два значения и выводит логическое значение как результат сравнения.
     </p>
 
-    <img src="files/puzzles/puzzles-logic-comparison.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-comparison.jpg">
 
     <p>
      Вместо использования значений <a href="manual/ru/puzzles/Logic.html#true_false">true / false</a>, как в <a href="manual/ru/puzzles/Logic.html#if_else">примере выше</a>, вы можете использовать любые другие пазлы, такие как *text*, чтобы задать значение переменной. Однако в этом случае вам дополнительно понадобится пазл сравнения, чтобы иметь возможность проверять текстовые значения. Результат сравнения (*true* или *false*) затем передается в пазл <a href="manual/ru/puzzles/Logic.html#if_else">if / else</a>:
     </p>
 
-    <img src="files/puzzles/puzzles-logic-example2.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-example2.jpg">
 
     <p>
       Вот более продвинутый пример: скрыть сферу только в том случае, если пользователь кликнул по кубу 3 раза:
     </p>
 
-    <img src="files/puzzles/puzzles-logic-example3.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-example3.jpg">
 
 
 
@@ -90,13 +90,13 @@
     Вы можете детализировать ваши <a href="manual/ru/puzzles/Logic.html#comparison">сравнения</a>, используя логические операторы *AND / OR*.
     </p>
 
-    <img src="files/puzzles/puzzles-logic-operators-and-or-sample.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-operators-and-or-sample.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-logic-operators-and-or.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-operators-and-or.jpg">
 
 
 
@@ -108,13 +108,13 @@
     Вы можете отрицать результат логического выражения (преобразовывать *true* в *false* и обратно) с помощью логического оператора *NOT*.
     </p>
 
-    <img src="files/puzzles/puzzles-logic-operator-not-sample.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-operator-not-sample.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-logic-operator-not.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-operator-not.jpg">
 
 
 
@@ -126,7 +126,7 @@
     Логические пазлы оперируют только двумя значениями, *true* и *false*, также известными как Булевы значения.
     </p>
 
-    <img src="files/puzzles/puzzles-logic-true-false.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-true-false.jpg">
 
     <p>
     Эти значения выдаются на выходе пазла <a href="manual/ru/puzzles/Logic.html#comparison">сравнения</a>, а также логических операторов <a href="manual/ru/puzzles/Logic.html#logical_operators_and_or">AND / OR</a> и <a href="manual/ru/puzzles/Logic. html#logical_operator_not">NOT</a>, и поставляются в качестве входных данных для разветвленных пазлов<a href="manual/ru/puzzles/Logic.html#if_else">if / else</a> и <a href="manual/ru/puzzles/Logic.html#test">test</a>.
@@ -142,13 +142,13 @@
     Значение *null*, строго говоря, не имеет отношения к логической алгебре. Если переменная установлена в *null*, это означает, что она не установлена в *true* или *false*, а скорее оставлена "неопределенной".
     </p>
 
-    <img src="files/puzzles/puzzles-logic-null-sample.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-null-sample.jpg">
 
     <p>
     Вы можете использовать *null* для инициализации вновь созданной переменной.
     </p>
 
-    <img src="files/puzzles/puzzles-logic-null.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-null.jpg">
 
 
 
@@ -160,13 +160,13 @@
     Иногда вы можете сделать свои пазлы более компактными или более удобными в использовании, используя пазл *test*, который сразу возвращает значение.
     </p>
 
-    <img src="files/puzzles/puzzles-logic-test-sample.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-test-sample.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-logic-test.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-logic-test.jpg">
 
 
     <h2>Проблема с Пазлами?</h2>
