--- a/manual/ru/puzzles/Loops.html
+++ b/manual/ru/puzzles/Loops.html
@@ -15,7 +15,7 @@
     <p>
     Эти пазлы предоставляют средства для задания итераций в вашем сценарии Пазлов.
    </p>
-    <img src="files/puzzles/puzzles-loops.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops.jpg">
 
     <h2>Содержание</h2>
 
@@ -44,13 +44,13 @@
     Этот пазл запускает пазлы, помещенные в слот *do*, указанное количество раз.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-repeat.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-repeat.jpg">
 
     <p>
     Например, следующий набор пазлов создает несколько копий куба и размещает их случайным образом на сцене.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-repeat-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-repeat-example.jpg">
 
 
 
@@ -62,13 +62,13 @@
     Этот пазл выполняет итерацию по заданному списку и запускает пазлы, помещенные в слот *do* для каждого элемента этого списка. Элементы для соответствующей итерации доступны через автоматически созданную <a href='manual/ru/puzzles/Variables.html'>переменную</a>.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-for-each.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-for-each.jpg">
 
     <p>
     Например, следующий набор пазлов добавляет аннотации ко всем объектам из списка.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-for-each-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-for-each-example.jpg">
 
 
 
@@ -80,13 +80,13 @@
     Этот пазл похож на <a href='manual/ru/puzzles/Loops.html#for_each'>for each</a>, за исключением того, что в нем значения переменных цикла даются в числовой последовательности.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-count-with.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-count-with.jpg">
 
     <p>
     Например, следующий набор пазлов считает от 2 до 10 с шагом 2, создавая таким образом числа 2, 4, 6, 8 и 10, клонирует куб на каждом шаге и использует эти числа для расположения копий вдоль оси X.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-count-with-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-count-with-example.jpg">
 
 
 
@@ -98,19 +98,19 @@
     Пазл *repeat while* запускает пазлы, помещенные в слот *do*, до тех пор, пока указанное логическое <a href='manual/ru/puzzles/Logic.html#comparison'>условие</a> истинно. Напротив, пазл *repeat until* прекращает выполнение сразу после того, как указанное логическое условие становится ложным.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-repeat-while-until.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-repeat-while-until.jpg">
 
     <p>
       Этот пазл хорошо подходит для ситуаций, когда внутри цикла что-то меняется, и это влияет на ваше решение продолжать или прекратить выполнение итераций. Например, следующий набор пазлов, использующий вариант *repeat while*, продолжает запрашивать ответ пользователя до тех пор, пока пользователь отвечает "да".
     </p>
 
-    <img src="files/puzzles/puzzles-loops-repeat-while-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-repeat-while-example.jpg">
 
     <p>
     Вы можете использовать вариант *repeat until*, чтобы задать тот же вопрос, но в несколько более раздражающей манере, делая ответ "нет" единственной возможностью прекратить это.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-repeat-until-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-repeat-until-example.jpg">
 
 
 
@@ -122,19 +122,19 @@
     Большинство циклов выполняется до тех пор, пока не будет выполнено условие завершения (в случае пазлов *repeat*) или пока все значения не будут приняты переменной цикла (в случае пазлов *count with* и *for each*). Этот пазл предоставляет дополнительные средства для управления поведением цикла. Хотя в приведенных ниже примерах используется пазл *for each*, они могут быть использованы с любым типом цикла.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-break-continue.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-break-continue.jpg">
 
     <p>
     Вариант *break* обеспечивает ранний выход. Например, в следующем наборе пазлов выполняется поиск объекта с именем "Cube". Как только он найден и переменная result установлена, дальнейшая итерация не требуется, и поэтому мы выходим из цикла.
     </p>
 
-    <img src="files/puzzles/puzzles-loops-break-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-break-example.jpg">
 
     <p>
     С другой стороны, вариант *continue* пропускает текущую итерацию, чтобы началась следующая итерация цикла. Например, следующий набор пазлов добавляет аннотации ко всем объектам на сцене, кроме "Cube".
     </p>
 
-    <img src="files/puzzles/puzzles-loops-continue-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-loops-continue-example.jpg">
 
 
     <h2>Проблема с Пазлами?</h2>
