--- a/manual/ru/puzzles/Numbers.html
+++ b/manual/ru/puzzles/Numbers.html
@@ -16,7 +16,7 @@
       Эти пазлы предоставляют средства для выполнения различных операций с числами в вашем сценарии.
     </p>
 
-    <img src="files/puzzles/puzzles-numbers.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers.jpg">
 
 
     <h2>Содержание</h2>
@@ -36,13 +36,13 @@
       Этот универсальный пазл дает возможность внести некоторое число в сценарий пазлов.
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-number.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-number.jpg">
 
     <p>
       Числа можно записывать без десятичных знаков (целые числа) или с десятичными знаками (числа с плавающей точкой). Очень большие или очень маленькие числа могут быть записаны с помощью научной (экспоненциальной) нотации.
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-number-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-number-example.jpg">
 
 
 
@@ -54,7 +54,7 @@
       Этот пазл позволяет визуально определить угол (в градусах).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-angle.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-angle.jpg">
 
 
 
@@ -66,13 +66,13 @@
       Этот пазл позволяет выполнять элементарные арифметические действия: сложение (+), вычитание (-), умножение (×) и деление (÷), а также экспоненцию (^).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-elementary-operation.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-elementary-operation.jpg">
 
     <p>
       Обратите внимание, что арифметика с плавающей точкой не всегда точна на 100% и может давать непредсказуемые результаты при сравнении числовых значений. Чтобы избавиться от проблем с точностью, вы можете использовать пазл <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-elementary-operation-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-elementary-operation-example.jpg">
 
 
 
@@ -84,13 +84,13 @@
       Этот пазл позволяет выполнять следующие математические операции: квадратный корень (√), абсолютное значение - модуль (|x|), изменение знака - отрицание (-), натуральный логарифм (ln), десятичный логарифм (log10), натуральная экспоненциальная функция (e^) и степень десяти (10^).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-arithmetic-operation-single-input.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-arithmetic-operation-single-input.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-arithmetic-operation-single-input-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-arithmetic-operation-single-input-example.jpg">
 
     <p>
       Обратите внимание, что арифметика с плавающей точкой не всегда точна на 100% и может давать непредсказуемые результаты при сравнении числовых значений. Чтобы избавиться от проблем с точностью, вы можете использовать пазл <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
@@ -106,13 +106,13 @@
       Данный пазл округляет заданное число. Вариант *round* округляет число до ближайшего целого числа: 2,49 округляется вниз (получается 2), а 2,5 округляется вверх (получается 3). Вариант *round up* округляет число в большую сторону до ближайшего целого числа: 2.1 округляется в большую сторону (получается 3). Вариант *round down* округляет число до ближайшего целого: 2.9 округляется вниз (получается 2).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-round.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-round.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-round-examples.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-round-examples.jpg">
 
 
 
@@ -124,19 +124,19 @@
       Этот пазл округляет заданное число с указанной точностью.
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-round-with-precision.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-round-with-precision.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-round-with-precision-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-round-with-precision-example.jpg">
 
     <p>
       Арифметика с плавающей точкой не всегда точна на 100% и может давать непредсказуемые результаты при сравнении числовых значений. Чтобы избавиться от проблем с точностью, вы можете использовать <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a> следующим образом: 
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-round-with-precision-example2.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-round-with-precision-example2.jpg">
 
 
 
@@ -148,13 +148,13 @@
       Этот пазл проверяет, является ли заданное число четным, нечетным, простым, целым, положительным, отрицательным или кратным какому-либо другому числу. Результатом будет *true*, если это так, и *false*, если нет. Применяется с пазлами <a href='manual/ru/puzzles/Logic.html'>Logic</a>.
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-check.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-check.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-check-examples.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-check-examples.jpg">
 
 
 
@@ -166,13 +166,13 @@
       Этот пазл ограничивает число, находящееся между указанными пределами (включительно).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-clamp.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-clamp.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-clamp-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-clamp-example.jpg">
 
 
 
@@ -184,7 +184,7 @@
       Этот пазл возвращает случайное целое число между указанными числами (включая оба предела).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-random-integer.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-random-integer.jpg">
 
     <p>
       Примечание: возможно введение нецелых пределов, хотя это расширяет диапазон, поскольку этот пазл выполняет некоторые дополнительные округления. 
@@ -194,7 +194,7 @@
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-random-integer-examples.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-random-integer-examples.jpg">
 
 
 
@@ -206,13 +206,13 @@
       Данный пазл возвращает случайное число с плавающей точкой в диапазоне от 0 (включительно) до 1 (исключительно).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-random-fraction.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-random-fraction.jpg">
 
     <p>
       В следующем примере этот пазл используется для генерации случайного цвета для материала:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-random-fraction-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-random-fraction-example.jpg">
 
 
 
@@ -224,13 +224,13 @@
       Этот пазл позволяет найти остаток после деления одного числа на другое (операция модуляции).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-remainder.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-remainder.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-remainder-examples.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-remainder-examples.jpg">
 
 
 
@@ -242,7 +242,7 @@
       Выполняет операцию над числами указанного <a href='manual/ru/puzzles/Lists.html'>списка</a>.
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-operations-on-list.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-operations-on-list.jpg">
 
     <p>
     <ul>
@@ -277,7 +277,7 @@
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-operations-on-list-examples.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-operations-on-list-examples.jpg">
 
 
 
@@ -289,13 +289,13 @@
       Данный пазл позволяет вычислить значения тригонометрических функций *синус* (sin), *косинус* (cos) и *тангенс* (tan), а также значения их обратных аналогов *арксинус* (asin), *арккосинус* (acos) и *арктангенс* (atan). Пазл ожидает (или возвращает) значения, выраженные в градусах.
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-trigonometric-functions.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-trigonometric-functions.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-trigonometric-functions-examples.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-trigonometric-functions-examples.jpg">
 
     <p>
       Обратите внимание, что арифметика с плавающей точкой не всегда точна на 100% и может давать непредсказуемые результаты при сравнении числовых значений. Чтобы избавиться от проблем с точностью, вы можете использовать пазл <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
@@ -311,13 +311,13 @@
       Этот пазл позволяет получить следующие математические константы: пи (&pi;), число Эйлера <i>e</i>, золотое сечение (&phi;), квадратный корень из 2, квадратный корень из &frac12; и значение бесконечности (&infin;).
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-constants.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-constants.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-numbers-constants-examples.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-numbers-constants-examples.jpg">
 
 
     [anchor:create_vector]
