--- a/manual/ru/puzzles/Physics.html
+++ b/manual/ru/puzzles/Physics.html
@@ -16,7 +16,7 @@
       Эти пазлы используются для моделирования физического поведения объектов.
     </p>
 
-    <img src="files/puzzles/puzzles-physics.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-physics.jpg">
 
     <h2>Содержание</h2>
 
