--- a/manual/ru/puzzles/Sound.html
+++ b/manual/ru/puzzles/Sound.html
@@ -39,7 +39,7 @@
       кэш памяти, так что при последующем использовании этого пазла с тем же URL-адресом звуковой файл не требует повторной загрузки. Мы рекомендуем использовать формат <strong>.mp3</strong>, так как он поддерживается большинством веб-браузеров.
     </p>
 
-    <img src="files/puzzles/puzzles-sound-load-sound.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-sound-load-sound.jpg">
 
     <p id="load_sound_preloading"><b>preloading audio</b></p>
     <p>
@@ -53,14 +53,14 @@
       Чтобы быть уверенным в том, что звук в вашем приложении работает правильно, рекомендуется загружать звуковые файлы заранее, например, во вкладке <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html#Tabs">init</a>, которая выполняется перед инициализацией приложения Verge3D. Вы также можете использовать пазл <a href="manual/ru/puzzles/Advanced.html#connector">connector</a>, чтобы организовать группу пазлов "load sound" более удобным способом:
     </p>
 
-    <img class="centered" src="files/puzzles/puzzles-sound-preload-init.jpg" style="max-width: 1000px">
+    <img class="centered" src="files/puzzles/puzzles-sound-preload-init.jpg">
     <span class="img-caption">Предварительная загрузка аудио во вкладке "init".</span>
 
     <p>
       После этого использование предварительно загруженных аудиофайлов в <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html#Tabs">main</a> или созданной пользователем вкладке не вызовет никаких проблем. Поскольку звук уже кэшируется после первого использования пазла "load sound", его не нужно загружать снова:
     </p>
 
-    <img class="centered" src="files/puzzles/puzzles-sound-preload-usage.jpg" style="max-width: 1000px">
+    <img class="centered" src="files/puzzles/puzzles-sound-preload-usage.jpg">
     <span class="img-caption">Использование предварительно загруженного аудио на вкладке "main".</span>
 
     <p><b>autoplay restrictions</b></p>
@@ -105,7 +105,7 @@
       </ul>
     </p>
 
-    <img src="files/puzzles/puzzles-sound-load-sound-type.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-sound-load-sound-type.jpg">
 
     <p class="note">
       Web Audio API, который используется типами <b>sound</b> и *midi*, поддерживается в большинстве
@@ -117,10 +117,10 @@
       Если необходимо использовать тип *sound*/*music* в браузерах, где он доступен, и одновременно поддерживать Internet Explorer 11, то рекомендуемое решение - использовать пазл <a href="manual/ru/puzzles/System.html#feature_available">feature available</a> с выбранной опцией <b>Web Audio API</b>, чтобы проверить, доступен API или нет, и в зависимости от этого загрузить аудио с типом <b>music</b> или <b>sound</b>. Вы можете сделать это как для пазла <a href="manual/ru/puzzles/Sound.html#load_sound_preloading">preloading</a>, так и для воспроизведения аудио, как показано ниже:
     </p>
 
-    <img class="centered" src="files/puzzles/puzzles-sound-load-feature-available-init.jpg" style="max-width: 1000px">
+    <img class="centered" src="files/puzzles/puzzles-sound-load-feature-available-init.jpg">
     <span class="img-caption">Предварительная загрузка аудио во вкладке "init" с проверкой наличия Web Audio API.</span>
 
-    <img class="centered" src="files/puzzles/puzzles-sound-load-feature-available-main.jpg" style="max-width: 1000px">
+    <img class="centered" src="files/puzzles/puzzles-sound-load-feature-available-main.jpg">
     <span class="img-caption">Использование предварительно загруженного аудио на вкладке "main" с проверкой наличия Web Audio API.</span>
 
 
