--- a/manual/ru/puzzles/Text.html
+++ b/manual/ru/puzzles/Text.html
@@ -16,7 +16,7 @@
      Текстовые пазлы предоставляют средства для различных операций с текстом в вашем сценарии Пазла.
     </p>
 
-    <img src="files/puzzles/puzzles-text.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text.jpg">
 
     <h2>Содержание</h2>
 
@@ -36,25 +36,25 @@
       Этот универсальный пазл предоставляет средства для добавления текста (символа, слова или строки) в сценарий ваших Пазлов.
     </p>
 
-    <img src="files/puzzles/puzzles-text-text.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-text.jpg">
 
     <p>
       Текстовый пазл часто используется с пазлами из разных категорий. В частности, вы можете указать URL для пазла <a href='manual/ru/puzzles/Scenes.html'>загрузчика сцен</a>, идентификаторы элементов HTML, правила CSS и цвета для <a href='manual/ru/puzzles/HTML.html'>HTML пазлов</a>, а также идентификаторы и URL для некоторых других пазлов.
     </p>
 
-    <img src="files/puzzles/puzzles-text-text-example2.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-text-example2.jpg">
 
     <p>
       Этот пазл также может быть использован для присвоения имен объектам, материалам, анимации или группам вместо соответствующих <a href='manual/ru/puzzles/Selectors.html'>пазлов-селекторов</a>, что может пригодиться для динамически загружаемого контента.
     </p>
 
-    <img src="files/puzzles/puzzles-text-text-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-text-example.jpg">
 
     <p>
       Наконец, некоторые пазлы можно настроить на текстовый ввод вместо выпадающего меню по умолчанию, что также полезно в случае динамически загружаемых сцен.
     </p>
 
-    <img src="files/puzzles/puzzles-text-text-example3.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-text-example3.jpg">
 
 
     [anchor:text_multiline]
@@ -69,7 +69,7 @@
         Пазл поддерживает CSS, HTML, Javascript и режимы выделения текста, которые можно переключать на лету.
     </p>
 
-    <img src="files/puzzles/puzzles-text-text-multiline.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-text-multiline.jpg">
 
 
     [anchor:create_text]
@@ -80,13 +80,13 @@
       Этот пазл позволяет объединить (конкатенировать) 2 или более фрагментов текста в одну строку. Если вы указываете нетекстовые значения, например, числа, они будут автоматически преобразованы в текст. Дополнительные вводы добавляются путем перетаскивания блока *item* из серой панели инструментов слева в блок *join*.
     </p>
 
-    <img src="files/puzzles/puzzles-text-create-text.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-create-text.jpg">
 
     <p>
       Пример: создать аннотацию, состоящую из некоторого текста и названия объекта.
     </p>
 
-    <img src="files/puzzles/puzzles-text-create-text-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-create-text-example.jpg">
 
 
     [anchor:append_text]
@@ -97,13 +97,13 @@
     Этот пазл добавляет текст в указанную <a href='manual/ru/puzzles/Variables.html'>переменную</a>.
     </p>
 
-    <img src="files/puzzles/puzzles-text-append-text.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-append-text.jpg">
 
     <p>
     Пример: создать аннотацию, состоящую из некоторого текста и названия объекта.
     </p>
 
-    <img src="files/puzzles/puzzles-text-append-text-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-append-text-example.jpg">
 
 
     [anchor:replace]
@@ -114,13 +114,13 @@
       Этот пазл ищет заданный фрагмент текста и заменяет его на указанный фрагмент текста, где бы он ни был найден (с учетом регистра).
     </p>
 
-    <img src="files/puzzles/puzzles-text-replace.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-replace.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-text-replace-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-replace-example.jpg">
 
 
     [anchor:reverse]
@@ -131,13 +131,13 @@
       Этот пазл переворачивает заданный фрагмент текста.
     </p>
 
-    <img src="files/puzzles/puzzles-text-reverse.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-reverse.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-text-reverse-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-reverse-example.jpg">
 
 
 
@@ -149,13 +149,13 @@
       Этот пазл подсчитывает количество символов в указанном тексте.
     </p>
 
-    <img src="files/puzzles/puzzles-text-length.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-length.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-text-length-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-length-example.jpg">
 
 
 
@@ -167,13 +167,13 @@
       Этот пазл проверяет, является ли заданный текст пустым (имеет длину 0). Результатом будет *true*, если это так, и *false*, если нет. Для использования с пазлами <a href='manual/ru/puzzles/Logic.html'>Логики</a>.
     </p>
 
-    <img src="files/puzzles/puzzles-text-is-empty.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-is-empty.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-text-is-empty-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-is-empty-example.jpg">
 
 
     [anchor:find]
@@ -184,13 +184,13 @@
       Этот пазл может быть использован для проверки, находится ли фрагмент текста в другом фрагменте текста и, если да, то где он появляется. Если текст найден, то возвращается его положение (символы в тексте индексируются, начиная с 0). Если текст не найден, пазл возвращает -1.
     </p>
 
-    <img src="files/puzzles/puzzles-text-find.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-find.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-text-find-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-find-example.jpg">
 
 
     [anchor:get_letter]
@@ -201,13 +201,13 @@
       Этот пазл извлекает символ из указанной позиции (символы в тексте индексируются, начиная с 0).
     </p>
 
-    <img src="files/puzzles/puzzles-text-get-letter.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-get-letter.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-text-get-letter-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-get-letter-example.jpg">
 
 
     [anchor:get_region]
@@ -218,13 +218,13 @@
       Этот пазл позволяет извлечь область текста между двумя указанными позициями (символы в тексте индексируются, начиная с 0).
     </p>
 
-    <img src="files/puzzles/puzzles-text-get-region.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-get-region.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-text-get-region-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-get-region-example.jpg">
 
 
     [anchor:adjust_case]
@@ -235,13 +235,13 @@
       Этот пазл создает версию входного текста, которая является либо UPPER CASE (все буквы в верхнем регистре), либо в нижнем регистре, либо Title Case (первые буквы в верхнем регистре, остальные буквы в нижнем регистре). Неалфавитные символы и текст на языках без регистра, таких как китайский, не затрагиваются.
     </p>
 
-    <img src="files/puzzles/puzzles-text-adjust-case.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-adjust-case.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-text-adjust-case-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-adjust-case-example.jpg">
 
 
     [anchor:trim_spaces]
@@ -252,13 +252,13 @@
       Этот пазл может удалять пробелы из начала текста, из конца текста или с обеих сторон текста.
     </p>
 
-    <img src="files/puzzles/puzzles-text-trim-spaces.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-trim-spaces.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-text-trim-spaces-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-trim-spaces-example.jpg">
 
 
     [anchor:count]
@@ -269,13 +269,13 @@
       Этот пазл подсчитывает, сколько раз фрагмент текста появляется в указанном тексте.
     </p>
 
-    <img src="files/puzzles/puzzles-text-count.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-count.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-text-count-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-count-example.jpg">
 
 
     [anchor:new_line]
@@ -295,13 +295,13 @@
       Этот пазл пытается преобразовать указанный текст в число, чтобы полученное значение можно было использовать в качестве входных данных для числовых операций. Если преобразование не удается, возвращается 0.
     </p>
 
-    <img src="files/puzzles/puzzles-text-convert-to-number.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-convert-to-number.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-text-convert-to-number-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-convert-to-number-example.jpg">
 
 
     [anchor:prompt]
@@ -312,13 +312,13 @@
       Этот пазл создает всплывающее окно с полем ввода. Цепочка выполнения приостанавливается, пока пользователь не нажмет кнопки OK или Cancel, после чего пазл возвращает введенное значение.
     </p>
 
-    <img src="files/puzzles/puzzles-text-prompt.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-prompt.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-text-prompt-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-text-prompt-example.jpg">
 
 
     <h2>Проблема с Пазлами?</h2>
