--- a/manual/zh/blender/Animation.html
+++ b/manual/zh/blender/Animation.html
@@ -23,7 +23,7 @@
 
     <h3>全对象动画</h3>
 
-    <p>动画关键帧可以添加在Blender中以标准方式添加，使用菜单 对象 > 动画 > 插入关键帧...（或使用快捷方式*i*)，选择时间线上的另一帧，移动/旋转/缩放对象到一个新位置，并为此位置添加一个新的动画关键帧。</p><img src="files/animation-blender/insert-keyframe.jpg" alt="在Verge3D for Blender中插入关键帧" class="centered" style="max-width: 1000px">
+    <p>动画关键帧可以添加在Blender中以标准方式添加，使用菜单 对象 > 动画 > 插入关键帧...（或使用快捷方式*i*)，选择时间线上的另一帧，移动/旋转/缩放对象到一个新位置，并为此位置添加一个新的动画关键帧。</p><img src="files/animation-blender/insert-keyframe.jpg" alt="在Verge3D for Blender中插入关键帧" class="centered">
     
     <p>另请参阅如下教程：</p>
 	
@@ -33,7 +33,7 @@
 
     <h3>骨骼动画</h3>
 
-    <p>可以在Blender中使用 <a href="https://docs.blender.org/manual/zh-hans/latest/animation/armatures/index.html" target="_blank">骨架</a> 对象。Verge3D支持每个骨骼最大4个权重（将自动选择4个影响最大的权重，其他的忽略）。骨架的骨骼可以在 <b>姿态模式(Pose Mode)</b>（快捷键Ctrl-Tab）下设置动画，使用菜单 姿态 > 动画 > 插入关键帧 ... （或使用快捷方式*i*)，选择时间线上的另一帧，移动/旋转/缩放骨骼到一个新位置，并为这个位置添加一个新的动画关键帧。</p><img src="files/animation-blender/skeletal-animation.jpg" alt="在Verge3D for Blender中为骨骼动画插入关键帧" class="centered" style="max-width: 1000px">
+    <p>可以在Blender中使用 <a href="https://docs.blender.org/manual/zh-hans/latest/animation/armatures/index.html" target="_blank">骨架</a> 对象。Verge3D支持每个骨骼最大4个权重（将自动选择4个影响最大的权重，其他的忽略）。骨架的骨骼可以在 <b>姿态模式(Pose Mode)</b>（快捷键Ctrl-Tab）下设置动画，使用菜单 姿态 > 动画 > 插入关键帧 ... （或使用快捷方式*i*)，选择时间线上的另一帧，移动/旋转/缩放骨骼到一个新位置，并为这个位置添加一个新的动画关键帧。</p><img src="files/animation-blender/skeletal-animation.jpg" alt="在Verge3D for Blender中为骨骼动画插入关键帧" class="centered">
 
     [anchor:Shape_Key_Animation]
 
@@ -45,13 +45,13 @@
 
     <h3>材质动画</h3>
 
-    <p>与Blender不同的是，您只能通过将材质参数连接到 *value* 或 *rgb* 节点来Verge3D制作材质动画。</p><img src="files/animation-blender/node-material-animation.jpg" alt="Verge3D for Blender中的节点材质动画" class="centered" style="max-width: 1000px"><p>这些节点指定的值或颜色可以在Blender中设置动画，方法是右键单击节点并选择<b>插入关键帧</b>（或者将光标悬停在其上并使用快捷方式*i*插入关键帧)，在时间线上选择另一帧，设置新的值或颜色并为其添加新的动画关键帧。</p><img src="files/animation-blender/node-material-animation-insert-keyframes.jpg" alt="在Verge3D for Blender的节点材质动画中插入关键帧" class="centered" style="max-width: 200px">
+    <p>与Blender不同的是，您只能通过将材质参数连接到 *value* 或 *rgb* 节点来Verge3D制作材质动画。</p><img src="files/animation-blender/node-material-animation.jpg" alt="Verge3D for Blender中的节点材质动画" class="centered"><p>这些节点指定的值或颜色可以在Blender中设置动画，方法是右键单击节点并选择<b>插入关键帧</b>（或者将光标悬停在其上并使用快捷方式*i*插入关键帧)，在时间线上选择另一帧，设置新的值或颜色并为其添加新的动画关键帧。</p><img src="files/animation-blender/node-material-animation-insert-keyframes.jpg" alt="在Verge3D for Blender的节点材质动画中插入关键帧" class="centered" style="max-width: 200px">
 
     [anchor:Procedural_Animation]
 
     <h3>程序动画</h3>
 
-    <p>您还可以使用拼图或JavaScript来随着时间修改坐标或其他参数的方式制作动画，而不仅仅是回放在Blender中预制作好的动画。特别是（基于tween.js库）的 <a href="manual/zh/puzzles/Animation.html#animate_param">animate param(动画参数)</a> 拼图，是一种自己的简单快捷地创作动画的方法。</p><img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="使用动画参数拼图在Verge3D for Blender中创建动画" class="centered" style="max-width: 1000px">
+    <p>您还可以使用拼图或JavaScript来随着时间修改坐标或其他参数的方式制作动画，而不仅仅是回放在Blender中预制作好的动画。特别是（基于tween.js库）的 <a href="manual/zh/puzzles/Animation.html#animate_param">animate param(动画参数)</a> 拼图，是一种自己的简单快捷地创作动画的方法。</p><img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="使用动画参数拼图在Verge3D for Blender中创建动画" class="centered">
 
     [anchor:Playback_Options]
 
@@ -76,7 +76,7 @@
 
     <h3>插值</h3>
 
-    <p>可在Blender的时间线窗口上点击右键调用切换关键帧插值的菜单（快捷键T）。</p><img src="files/animation-blender/interpolation.jpg" alt="Verge3D for Blender中的关键帧插值" class="centered" style="max-width: 1000px"><p>Verge3D支持Blender中所有可用于动画关键帧的插值模式。</p>
+    <p>可在Blender的时间线窗口上点击右键调用切换关键帧插值的菜单（快捷键T）。</p><img src="files/animation-blender/interpolation.jpg" alt="Verge3D for Blender中的关键帧插值" class="centered"><p>Verge3D支持Blender中所有可用于动画关键帧的插值模式。</p>
 
     [anchor:Frame_Rate]
 
@@ -88,7 +88,7 @@
 
     <h2>使用拼图控制动画</h2>
 
-    <p>您可以使用 <a href="manual/zh/puzzles/Animation.html">动画拼图</a> 来回放一个预先制作好的动画（点击链接了解详情）。</p><img src="files/puzzles/puzzles-animation.jpg" alt="Verge3D动画拼图" class="centered" style="max-width: 1000px"><p>动画也可以用其他可视化脚本块来实现。请参阅 <a href="manual/zh/puzzles/Camera.html">摄影机</a> 和 <a href="manual/zh/puzzles/Time.html">时间</a> 拼图。</p>
+    <p>您可以使用 <a href="manual/zh/puzzles/Animation.html">动画拼图</a> 来回放一个预先制作好的动画（点击链接了解详情）。</p><img src="files/puzzles/puzzles-animation.jpg" alt="Verge3D动画拼图" class="centered"><p>动画也可以用其他可视化脚本块来实现。请参阅 <a href="manual/zh/puzzles/Camera.html">摄影机</a> 和 <a href="manual/zh/puzzles/Time.html">时间</a> 拼图。</p>
 
     <h2>遇到问题？</h2>
 
