--- a/manual/zh/introduction/AR-VR-development.html
+++ b/manual/zh/introduction/AR-VR-development.html
@@ -60,11 +60,11 @@
 
     <p>对于 <i>没有控制器</i> 的VR设备（例如Cardboard），可以使用基于凝视的交互控制方式操作（十字光线指示器）。</p>
     
-    <img src="files/ar-vr-development/gaze-based-reticle-pointer.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/ar-vr-development/gaze-based-reticle-pointer.jpg" class="centered">
 
     <p>对于 <i>带有控制器</i>, 的设备，交互是通过从控制器投射的虚拟射线来执行的。</p>
     
-    <img src="files/ar-vr-development/google-daydream-vr-controller.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/ar-vr-development/google-daydream-vr-controller.jpg" class="centered">
 
     <p>您可以使用标准的 <a href="manual/zh/puzzles/Events.html#when_hovered">when hovered(当悬停时)</a> 或 <a href="manual/zh/puzzles/Events.html#when_clicked">when clicked(当点击时)</a> 拼图来捕捉用户事件，以及VR特定的 <a href="manual/zh/puzzles/AR_VR.html#session_event">活动会话</a> 。</p>
 
