--- a/manual/zh/introduction/Asset-compression.html
+++ b/manual/zh/introduction/Asset-compression.html
@@ -54,7 +54,7 @@
 
     <p>压缩过的 <strong>.xz</strong> 文件（例如， <i>my_awesome_app.gltf.xz</i> 和 <i>my_awesome_app.bin.xz</i> ）会保存在原始文件目录下。下一步就只需在应用中启用加载它们了。在场景中启用加载这些压缩文件，您需要打开拼图…</p>
     
-    <img src="files/beginner_guide/app-manager-app-buttons-puzzles.png" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/app-manager-app-buttons-puzzles.png" class="centered">
   
     <p>...并切换到 <strong>init</strong> 标签:</p>
     
