--- a/manual/zh/introduction/Facebook-3D-Posts.html
+++ b/manual/zh/introduction/Facebook-3D-Posts.html
@@ -34,9 +34,9 @@
     <h2>从3ds Max导出GLB文件</h2>
 
     <p>要在 <strong>3ds Max</strong> 中执行导出，请转到Verge3D菜单，并选择"Export Facebook GLB..."。</p><img
-      src="files/facebook-3d-posts/export-glb-max1.jpg" class="centered" style="max-width: 1000px">
+      src="files/facebook-3d-posts/export-glb-max1.jpg" class="centered">
     <p>在显示的文件对话框中，选择导出路径并单击*保存*。</p><img src="files/facebook-3d-posts/export-glb-max2.jpg" class="centered"
-      style="max-width: 1000px">
+     >
     <p><a href="manual/zh/introduction/Facebook-3D-Posts.html#Export_GLB_Blender" id="Export_GLB_Blender"
         class="permalink">#</a></p>
 
@@ -44,16 +44,16 @@
 
     <p>要在 <strong>Blender</strong> 中执行导出，请转到“文件 > 导出”，然后选择“Facebook
       GLB（.glb）”选项。通用的GLB导出选项“Verge3D glTF Binary（.glb）”也可以工作，但会生成优化程度相对稍低的文件。</p><img
-      src="files/facebook-3d-posts/export-glb-blender.png" class="centered" style="max-width: 1000px">
+      src="files/facebook-3d-posts/export-glb-blender.png" class="centered">
     <p><a href="manual/zh/introduction/Facebook-3D-Posts.html#Compose_3D_Post_in_Facebook"
         id="Compose_3D_Post_in_Facebook" class="permalink">#</a></p>
 
     <h2>在Facebook上撰写3D帖子</h2>
 
     <p>现在你只需把GLB文件拖放到你的Facebook页面中即可。</p><img src="files/facebook-3d-posts/post-fb.png" class="centered"
-      style="max-width: 1000px">
+     >
     <p>在Facebook post编辑器中，您也可以根据自己的喜好选择背景。</p><img src="files/facebook-3d-posts/3d-post-example.png" class="centered"
-      style="max-width: 1000px">
+     >
     <p>看一看它在Facebook上是什么样子的： <a href="https://www.facebook.com/soft8soft/posts/2003080113280076"
         target="_blank">链接</a>。此模型的源文件可以在Verge3D安装目录的“applications”文件夹中找到（请参见下面的“Starter
       files”）。</p>
@@ -65,7 +65,7 @@
     <h2>起始文件</h2>
 
     <p>我们提供了一个为3ds Max和Blender配置了必要导出设置的Verge3D项目示例。starter项目包含的环境映射与Facebook用于最大一致性的环境映射完全相同。</p><img
-      src="files/facebook-3d-posts/facebook-ready-asset-file-blender.jpg" class="centered" style="max-width: 1000px">
+      src="files/facebook-3d-posts/facebook-ready-asset-file-blender.jpg" class="centered">
     <p>在Verge3D的 <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">发行版</a>
       中可以找到这些文件，路径为"applications/fb_max" (3ds Max)或 "applications/fb" (Blender)。</p>
 
