--- a/manual/zh/introduction/HTML-based-user-interfaces.html
+++ b/manual/zh/introduction/HTML-based-user-interfaces.html
@@ -51,7 +51,7 @@
                         (此命名非必需，可修改)。除了界面中的HTML元素，此 <i>index.html</i> 文件中还通过 <strong>iframe</strong> 素内嵌了Verge3D项目的
                         <i>teapot_heater.html</i>文件。
                 </p><img src="files/HTML-based-user-interfaces/layered-html.jpg" class="centered"
-                        style="max-width: 1000px">
+                       >
                 <p>在Verge3D应用管理器中，这样的复合型项目会有两个启动图标，点击后分别启动您自行建立的<i> index.html</i> 页面及独立的Verge3D应用页面。</p><img
                         src="files/HTML-based-user-interfaces/teapot-heater-app-manager.jpg" class="centered"
                         style="max-width: 676px;">
@@ -135,7 +135,7 @@
                         style="max-width: 1000px;">
                 <p>在这一阶段，我们可以生成UI的 <strong>.html</strong> 文件，并放在Verge3D应用目录中测试。单击在上面的尖括号按钮（<strong>Export
                                 Code</strong>）...</p><img src="files/HTML-based-user-interfaces/webflow-export-code.jpg"
-                        class="centered" style="max-width: 1000px">
+                        class="centered">
                 <p>...然后单击 <strong>Prepare ZIP</strong> ，最后，单击 <strong>Download ZIP</strong>：</p><img
                         src="files/HTML-based-user-interfaces/webflow-export-code2.jpg" class="centered"
                         style="max-width: 638px">
@@ -175,13 +175,13 @@
     Once you launched this software, select <strong>Create new file</strong>...
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-create-new.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-create-new.jpg" class="centered">
 
     <p>
     ...then select <strong>HTML</strong> on the left panel and fill out all the fields: <strong>Name</strong> (e.g. "my_awesome_app_gwd"), <strong>Location</strong> (use any path, yet preferably <i>out</i> of your app folder to avoid confusion with the published version) and <strong>Title</strong> (e.g. "My Awesome App"), and click <strong>OK</strong>.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-create-new2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-create-new2.jpg" class="centered">
 
     <p class="note">
     At first run, if you didn't maximize the window at startup and maximized it later, the newly created blank document may appear small. Use the *Viewport Resize* tool and drag the document corner to make it bigger or even fullscreen.
@@ -192,25 +192,25 @@
     Let's start by adding the <strong>iframe</strong> element for embedding our Verge3D app's main launching file, <i>my_awesome_app.html</i>. In Google Web Designer this can be done by dragging the <strong>IFrame</strong> component out from the list under the <strong>Components</strong> tab.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-add-iframe.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-add-iframe.jpg" class="centered">
 
     <p>
     After the <strong>IFrame</strong> component is placed on the page, switch to the <strong>Properties</strong> tab and make your <strong>iframe</strong> element occupy the entire page by specifying zeroes for the left and top positions and 100% for the width and height. Also, in the <strong>Source</strong> field put the path to Verge3D app main file - "my_awesome_app.html" (assuming that we'll be publishing our UI file in the root of the app folder).
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-add-iframe2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-add-iframe2.jpg" class="centered">
 
     <p>
     At this stage we can generate our UI <strong>.html</strong> file and try it with the Verge3D app. Click the <strong>Publish</strong> button in the top-right corner and select <strong>Locally</strong>.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-publish.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-publish.jpg" class="centered">
 
     <p>
     In the publishing dialog select the path to the <strong>verge3d/applications</strong> folder as <strong>Location</strong>. Use the name of your application folder, <strong>my_awesome_app</strong>, in the <strong>Name</strong> field in order to save the files right in its root.
     </p>
 
-    <img src="files/HTML-based-user-interfaces/gwd-publish2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/HTML-based-user-interfaces/gwd-publish2.jpg" class="centered">
 
     <p>
     As a result, several new files will be added to your application folder, including *index.html* and some scripts.
