--- a/manual/zh/introduction/Puzzles-Visual-Logic-Editor.html
+++ b/manual/zh/introduction/Puzzles-Visual-Logic-Editor.html
@@ -34,7 +34,7 @@
     <h1>可视化逻辑编辑器，也称为拼图编辑器</h1>
 
     <p>Verge3D拼图编辑器是一个用于创建行为场景的工具，功能强大且容易上手。借助拼图，您可以为3D内容添加与用户之间的交互式响应。</p><img
-      src="files/puzzles-editor/puzzles-editor-dark.jpg" class="centered" style="max-width: 1000px">
+      src="files/puzzles-editor/puzzles-editor-dark.jpg" class="centered">
     <p>如果您不擅长代码，这个工具将会显著提升您创作的能力。如果您本身就是经验丰富的程序员，您也会发现其在原型设计与生产中的好用之处。</p>
 
 
@@ -47,7 +47,7 @@
     <p>点击应用管理器主页操作列表中的拼图按钮，可以为应用添加或编辑拼图：</p><img src="files/app-manager/app-manager-run-puzzles-from-main.jpg"
       class="centered" style="max-width: 800px">
     <p>... 或者您也可以在应用详情页面的右侧点击拼图按钮：</p><img src="files/app-manager/app-manager-run-puzzles-from-app-page.jpg"
-      class="centered" style="max-width: 1000px">
+      class="centered">
 
     [anchor:User_Interface]
 
@@ -58,7 +58,7 @@
     <h3>布局</h3>
 
     <p>拼图可以从左侧扩展工具箱中推拽到主工作区。三维渲染预览视窗浮动显示在右上角，此窗口可以移动、调整大小、隐藏、暂停及检查帧速率（FPS）。</p><img
-      src="files/puzzles-editor/layout.jpg" class="centered" style="max-width: 1000px">
+      src="files/puzzles-editor/layout.jpg" class="centered">
     <p><a href="manual/zh/introduction/Puzzles-Visual-Logic-Editor.html#Controls">控制</a> 按钮位于页面的底部。选项卡显示在页面顶部，默认选项卡为为
       <i>init（初始化工作区）</i> 和 <i>main（主工作区）</i>。</p>
 
@@ -87,7 +87,7 @@
     <h3>运行</h3>
 
     <p>点击此按钮后，编辑器内的拼图即会生效。点击运行按钮后，由引擎解释当前存在于工作区所有选项卡内的拼图，并生成JavaScript代码。然后，浏览器会执行代码并应用于后台运行的应用。</p><img
-      src="files/puzzles-editor/controls-run.jpg" class="centered" style="max-width: 1000px">
+      src="files/puzzles-editor/controls-run.jpg" class="centered">
     <p>大多数情况下，您可以反复点击<b>运行</b>按钮来执行拼图中的调整。但是，如果要重置应用状态并执行初始化运行，则需要点击浏览器的刷新按钮。刷新页面后，拼图自动生效。请确保在刷新前保存修改，否则将丢失为未保存的内容。</p>
 
 
@@ -96,7 +96,7 @@
 
     <p>
       击此按钮保存拼图。与<b>运行</b>操作类似，点击<b>保存</b>按钮后，引擎会解释当前工作区所有选项卡内的拼图，并生成JavaScript代码，但并不执行。所有的拼图和生成的代码都分别作为文件*visual_logic.xml*和*visual_logic.js*保存在应用的目录中。
-    </p><img src="files/puzzles-editor/controls-save.jpg" class="centered" style="max-width: 1000px">
+    </p><img src="files/puzzles-editor/controls-save.jpg" class="centered">
     <p><b>保存</b>操作需要本地开发服务器处在运行状态该服务器会在Blender，3ds Maya或Maya的第一个实例启动时自动启动。但如果服务器因为某种原因关闭，在会在尝试保存拼图时显示连接错误：</p><img
       src="files/puzzles-editor/controls-save-error.jpg" class="centered" style="max-width: 961px">
     <p>在这种情况下，您应该启动blender，3ds Max或Maya。如果这些软件已经在运行，请尝试再次启动应用管理器（App Mamager）。</p>
@@ -135,7 +135,7 @@
 
     <p>为拼图添加注释。通过单击拼图左上角的问号按钮显示和关闭注释，点击后展开对应的注释文本窗口。注释可以在开启和关闭的状态下存储。</p><img
       src="files/puzzles-editor/puzzles-editor-right-click-menu-add-comment.jpg" class="centered"
-      style="max-width: 1000px">
+     >
     <p>可以通过在右键菜单中选择“Remove Comment”来移除注释。</p><img
       src="files/puzzles-editor/puzzles-editor-right-click-menu-remove-comment.jpg" class="centered"
       style="max-width: 430px">
@@ -147,7 +147,7 @@
     <h3>Collapse / Expand</h3>
 
     <p>可以折叠一组拼图，以使其更紧凑。</p><img src="files/puzzles-editor/puzzles-editor-right-click-menu-collapse-expand.gif"
-      class="centered" style="max-width: 1000px">
+      class="centered">
     <h3>Disable / Enable</h3>
 
     <p>使用此拼图可以对某段拼图跳过执行。</p><img src="files/puzzles-editor/puzzles-editor-right-click-menu-disable-enable.gif"
