--- a/manual/zh/introduction/Updating.html
+++ b/manual/zh/introduction/Updating.html
@@ -24,7 +24,7 @@
     <p>通过重命名来备份当前的Verge3D文件夹（例如，将“verge3d”重命名为“verge3d_old”）。</p>
 
     <p>下载并解压Verge3D最新版软件包到一个新的同名文件夹中（即Verge3D）。</p><img src="files/updating/files-backup.jpg" class="centered"
-      style="max-width: 1000px">
+     >
     <p>通过使用相同的文件夹名称，以避免在3D软件中重新配置路径。</p>
 
     [anchor:update_applications]
@@ -60,7 +60,7 @@
       从原文件夹复制 <strong>.max</strong> ， <strong>.blend</strong> 或 <b>.mb</b> 文件，所有的贴图、声音和拼图场景文件 <strong>visual_logic.xml</strong> 到新应用文件夹中（在 <strong>verge3d/applications</strong> 中）。当系统提示文件已存在时，请选择覆盖。如果你在应用中选择了基于HTML的UI时，请同样拷贝相关文件到目标文件夹。
     </p>
     
-    <img src="files/updating/files-copy.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/updating/files-copy.jpg" class="centered">
 
     <p>最后，您还需要执行glTF的导出，以便其能够跟进最近的更新。如果您的应用中使用了拼图，您需要在拼图编辑器中重新保存场景以生成与最新版引擎匹配的代码。</p>
 
