--- a/manual/zh/introduction/Using-JavaScript.html
+++ b/manual/zh/introduction/Using-JavaScript.html
@@ -39,7 +39,7 @@
         href="manual/zh/puzzles/Advanced.html#exec_script">"exec script" (执行脚本) 拼图的文档页面</a>。</p>
 
     <p>如下图示例，使用 "exec script"拼图实现了在场景中单击对象时改变材质的功能：</p><img
-      src="files/using-javascript/basics-exec-script-example.jpg" class="centered" style="max-width: 1000px">
+      src="files/using-javascript/basics-exec-script-example.jpg" class="centered">
 
     [anchor:Method_2_Standard]
 
@@ -77,7 +77,7 @@ function runCode(app) {
     <p>现在保存 <strong>.js</strong> 文件并运行应用，不会看出任何反应，但打开浏览器控制台后您便会注意到上面那段代码已经起作用了。浏览器控制台通常可以用F12键（Linux和Windows上的Chrome与火狐
       ）打开。在Mac电脑中，Chrome使用 View > Developer > JavaScript控制台菜单（快捷键：Option-Cmd-J）开启，Safari需使用 Developer > Show Error
       Console菜单（快捷键：Option-Cmd-C）开启浏览器控制台。</p><img src="files/using-javascript/basics-console-log.jpg" class="centered"
-      style="max-width: 1000px">
+     >
     <p>通过代码您可以对场景做一些改变，比如移动默认的Verge3D立方体（在3ds Max和Maya中名为“Box001”，在Blender中名为“cube”）...</p>
     
 <code>
@@ -101,10 +101,10 @@ function runCode(app) {
 </code>
 
 
-    <img src="files/using-javascript/basics-change-material.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/using-javascript/basics-change-material.jpg" class="centered">
     <p>请查看 <a href="https://cdn.soft8soft.com/demo/examples/index.html" target="_blank">Verge3D代码示例</a> ，获得更多灵感。点击
       <strong>View source</strong> 按钮,，可以打开示例的原始代码。
-    </p><img src="files/using-javascript/basics-code-examples.jpg" class="centered" style="max-width: 1000px">
+    </p><img src="files/using-javascript/basics-code-examples.jpg" class="centered">
 
     [anchor:Method_3_Compact]
 
@@ -159,7 +159,7 @@ function runCode() {
     <h2>从拼图中获得灵感</h2>
 
     <p>这不是一种方法，而是一种提示。事实上，当您每次单击Puzzles编辑器中的*Save*按钮时，它都将生成一个自包含的、人类可读的JavaScript模块，并以*visual_logic.js*命名保存在您的应用文件夹中。
-    </p><img src="files/using-javascript/get-inspired-by-puzzles.jpg" class="centered" style="max-width: 1000px">
+    </p><img src="files/using-javascript/get-inspired-by-puzzles.jpg" class="centered">
     <p>这样，您就有了一个对应特定JavaScript API工作方法的可运行示例，即并可重新使用自己感兴趣的拼图所生成的代码片段。</p>
 
 
