--- a/manual/zh/max/Morphing.html
+++ b/manual/zh/max/Morphing.html
@@ -29,7 +29,7 @@
 
     <p>在3ds Max中，可通过添加 <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Modifiers/files/GUID-506247E2-1F5D-4857-998E-8256FD88626D-htm.html" target="_blank">变形器修改器</a> 并设置通道的方式来添加变形目标。请注意，由于硬件限制，活动的变形目标总数是有限的。大多数情况下，对蒙皮对象可用5个变形目标，其他对象可用6个。请参考 <a href="manual/zh/introduction/Hardware-Related-Issues.html#too_many_attributes">本章节</a> 了解如何在更复杂的情况下计算限额。<br /><br />在渲染过程中，引擎选择6个影响最大的变形目标，并忽略其他多出的目标。</p>
     
-    <img src="files/morphing-max/morpher-modifier.jpg" alt="Verge3D for 3ds Max中的变形" class="centered" style="max-width: 1000px">
+    <img src="files/morphing-max/morpher-modifier.jpg" alt="Verge3D for 3ds Max中的变形" class="centered">
 
     [anchor:controlling_with_puzzles]
 
