--- a/manual/zh/max/Viewport-Render-Preview.html
+++ b/manual/zh/max/Viewport-Render-Preview.html
@@ -59,7 +59,7 @@
     
     <p>可以随时点击"<b>渲染</b>"按钮来重复渲染。</p>
     
-    <img src="files/viewport-render-preview/render-settings4.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/viewport-render-preview/render-settings4.jpg" class="centered">
 
     [anchor:ActiveShade_Mode]
 
