--- a/manual/zh/maya/Beginners-Guide.html
+++ b/manual/zh/maya/Beginners-Guide.html
@@ -42,11 +42,11 @@
     <p>虽然您可以先设计好模型后再创建Verge3D项目，但我们建议您从一开始就习惯使用应用管理器。通过这样，您可以确保所有文件被正确组织并存储在同一个文件夹中，这对于项目的完整性非常重要，特别是如果您计划将其转交给第三方。</p>
 
     <p>预先利用<b>应用管理器</b>的另一个好处是，您将始终拥有一个可以正常运行的，并可随时可在浏览器中运行或重载的网页应用，而无需每次都先打开三维场景文件。</p><img
-      src="files/beginners-guide-maya/app-manager-main.jpg" class="centered" style="max-width: 1000px">
+      src="files/beginners-guide-maya/app-manager-main.jpg" class="centered">
     <p>当您点击*Verge3D*菜单中的*App Manager*时，应用管理器将在网页浏览器中打开。您可以在操作系统的设置中更改默认的网页浏览器。您可以使用任何现代浏览器，但我们推荐使用最新版本的 <a
         href="https://www.google.com/chrome/" target="_blank">谷歌浏览器</a>
       。它是最快速且最符合行业标准的浏览器，同时内置了好用的网页开发工具。针对中国大陆区的用户的友情提示：我们不推荐QQ浏览器和IE浏览器。如果您使用猎豹浏览器或360浏览器，使用过程中也请确保不要开启兼容性模式。</p><img
-      src="files/beginner_guide/app-manager-maya.jpg" class="centered" style="max-width: 1000px">
+      src="files/beginner_guide/app-manager-maya.jpg" class="centered">
     <p>点击左侧边栏上的按钮来创建一个新项目。</p><img src="files/app-manager/app-manager-create.jpg" class="centered"
       style="max-width: 569px">
     <p>输入项目名称（或直接使用<i>My_Awesome_App</i>），然后单击“Create App”按钮。可以先不改变默认配置选项。</p><img
@@ -82,9 +82,9 @@
     <p class="note">您需要知道，应用只加载以glTF格式导出的文件，而不是Maya保存场景文件，这一点很重要。所以每次您在Blender源文件中做出修改后，都必须重新导出，以便在应用中实时看到修改后的效果。</p>
 
     <p>可以从主菜单栏的*Verge3D*菜单中进行导出。建议为该操作指定一个快捷方式，因为这是常用操作。</p><img src="files/beginner_guide/export-maya.jpg"
-      class="centered" style="max-width: 1000px">
+      class="centered">
     <p>将场景导出为 *gltf* 格式的文件，保存到应用的根目录。</p><img src="files/beginner_guide/export-name-maya.jpg" class="centered"
-      style="max-width: 1000px">
+     >
     <p>您可以在场景中添加几个3D对象，导出为*glTF*，然后在应用管理器中点击蓝色的Verge3D图标运行应用，以测试运行效果。</p>
 
     <p class="note">
@@ -100,20 +100,20 @@
     </p><img src="files/beginners-guide-maya/app-manager-app-buttons-puzzles.jpg" class="centered"
       style="max-width: 800px">
     <p>在应用管理器中单击列表中的*拼图*图标，即可打开拼图编辑器场景，应用场景预览视图将同步显示在其右上角。</p><img src="files/beginners-guide-maya/puzzles-editor.jpg"
-      class="centered" style="max-width: 1000px">
+      class="centered">
     <p>位于左侧的工具箱包含了拼图的类别目录（如“事件”、“选择器”、“对象”等）。点击展开列表，打开拼图清单，可以选中拼图块并拖拽到工作区中。通过连接组合 <a
         href="manual/zh/introduction/Puzzles-Visual-Logic-Editor.html">各种拼图</a> ，您可在场景为3D对象创建基于用户行为的交互流程。</p><img
-      src="files/beginner_guide/puzzles-toolbox.jpg" class="centered" style="max-width: 1000px">
+      src="files/beginner_guide/puzzles-toolbox.jpg" class="centered">
     <p>从下面这个简单易懂的示例做起，先从 *Events | 事件* 类目中拖出 *When Clicked(当点击时)* 拼图，从 *Selectors | 选择器* 中拖出 *Select an object(选择一个对象)*
-      拼图。</p><img src="files/beginner_guide/puzzles-toolbox2.jpg" class="centered" style="max-width: 1000px">
+      拼图。</p><img src="files/beginner_guide/puzzles-toolbox2.jpg" class="centered">
     <p>将它们连接在一起，意味着应用将会一直等待用户点击下拉菜单指定的对象（例如“立方体”），然后执行在do插槽中的命令。但如果 *do* 插槽中为空则不执行任何操作。</p><img
       src="files/beginner_guide/puzzles-example.jpg" class="centered" style="max-width: 500px">
     <p>拖出 *hide(隐藏)* 拼图从 *objects* 并插入到该插槽。从 *Object | 对象* 类目拖出另一个对象选择器拼图，并将其与 *hide(隐藏)* 连接。</p><img
       src="files/beginner_guide/puzzles-example2.jpg" class="centered" style="max-width: 500px">
     <p>现在一旦用户点击3D对象，它就会从视图中消失。单击 *Run(运行)* 按钮以启动应用，点击立方体，检查拼图设置是否生效。</p><img src="files/beginner_guide/puzzles-run.jpg"
-      class="centered" style="max-width: 1000px">
+      class="centered">
     <p>为保存您刚才对场景的交互设计，请记得关闭拼图编辑器前点击保存按钮。</p><img src="files/beginner_guide/puzzles-save.jpg" class="centered"
-      style="max-width: 1000px">
+     >
     <p>完成拼图后，您就可以在应用管理器中的单机蓝色图标运行此交互式应用了。</p>
 
     <p class="note">恭喜您，您已经成为一名程序员了！</p>
@@ -153,7 +153,7 @@
     <p>如果您还处在学习过程中，可以长期试用Verge3D。但如果已经在商业活动和项目流程中使用，您必须购买 <a href="https://www.soft8soft.com/licensing/"
         target="_blank">授权</a>。授权信息将通过电子邮件发送（下图为随机示例）。</p><img src="files/beginners-guide-maya/license-key-example.jpg"
       class="centered" style="max-width: 900px"> <img
-      src="files/beginners-guide-maya/app-manager-license-activation.jpg" class="centered" style="max-width: 1000px">
+      src="files/beginners-guide-maya/app-manager-license-activation.jpg" class="centered">
     <p>在应用管理器中输入授权码后，将激活Verge3D安装实例，并从所有应用页面中删除试用水印。</p><img
       src="files/beginners-guide-maya/app-manager-license-activated.jpg" class="centered" style="max-width: 485px">
     <p class="note">每次更新到新版本后，请务必再次输入授权码。</p>
