--- a/manual/zh/puzzles/Advanced.html
+++ b/manual/zh/puzzles/Advanced.html
@@ -40,7 +40,7 @@
       <li><b>PROC</b> - 可以通过这个对象访问过程拼图。</li>
     </ul>
     
-    <img src="files/puzzles/puzzles-advanced-exec-script.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-advanced-exec-script.jpg">
     <p><b>关于 "Init" 和其他标签，使用内置插件的具体细节</b></p>
     <ul>
       <li>如果 <b>app</b> 内置变量在 <b>Init</b> 标签中被使用，那么它就不能用于这个拼图，因为在那个阶段，应用还没有被正确初始化。</li>
