--- a/manual/zh/puzzles/Physics.html
+++ b/manual/zh/puzzles/Physics.html
@@ -17,7 +17,7 @@
 
     <p>此类拼图用来模拟对象的物理系统行为。</p>
     
-    <img src="files/puzzles/puzzles-physics.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-physics.jpg">
     <h2>内容</h2>
 
     [contents] [anchor:physics_puzzles_reference]
