--- a/manual/ru/maya/Beginners-Guide.html
+++ b/manual/ru/maya/Beginners-Guide.html
@@ -54,13 +54,13 @@
       Еще одним преимуществом использования менеджера приложений является то, что у вас всегда будет работающее веб-приложение, которое вы можете запускать/перезагружать в браузере, без необходимости сначала переходить к файлам сцены.
     </p>
 
-    <img src="files/beginners-guide-maya/app-manager-main.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginners-guide-maya/app-manager-main.jpg" class="centered">
 
     <p>
       Менеджер приложений открывается в веб-браузере при нажатии кнопки *App Manager*. Будет запущен системный браузер по умолчанию (вы можете изменить его в настройках вашей ОС). Будет работать любой современный браузер, но мы рекомендуем последнюю версию <a href="https://www.google.com/chrome/" target="_blank">Google Chrome</a> , которая является быстрой, совместима со стандартами и предлагает хорошие инструменты для веб-разработки. 
     </p>
 
-    <img src="files/beginner_guide/app-manager-maya.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/app-manager-maya.jpg" class="centered">
 
     <p>
      Вы можете создать новый проект, используя кнопку на левой панели.
@@ -128,13 +128,13 @@
       Экспорт можно выполнить из меню *Verge3D* на панели главного меню. Возможно, вы захотите назначить горячюю клавишу для этой операции, так как она выполняется довольно часто. 
     </p>
 
-    <img src="files/beginner_guide/export-maya.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/export-maya.jpg" class="centered">
 
     <p>
       Экспортируйте свою сцену в корень соответствующей папки приложения в формате *glTF*.
     </p>
 
-    <img src="files/beginner_guide/export-name-maya.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/export-name-maya.jpg" class="centered">
 
     <p>
       Чтобы протестировать, добавьте несколько объектов в свою сцену, экспортируйте в *glTF* и запустите приложение, щелкнув синюю иконку с логотипом Verge3D в менеджере приложений. 
@@ -160,19 +160,19 @@
       Нажмите кнопку *Puzzles* рядом с названием приложения в менеджере приложений. Это запустит ваше приложение с прикрепленным к нему редактором пазлов. 
     </p>
 
-    <img src="files/beginners-guide-maya/puzzles-editor.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginners-guide-maya/puzzles-editor.jpg" class="centered">
 
     <p>
       Слева расположена панель инструментов с некоторыми категориями ("Events", "Selectors", "Objects" и т.д.). Категории открываются щелчком мыши, показывая пазлы, которые вы можете перетащить в рабочую область. Соединяя <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html">различные пазлы</a> между собой, вы можете создавать сценарии поведения 3D объектов с реакцией на действия пользователя.
     </p>
 
-    <img src="files/beginner_guide/puzzles-toolbox.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/puzzles-toolbox.jpg" class="centered">
 
     <p>
       Чтобы потренироваться для начала, перетащите пазл *when clicked* из категории *Events* и пазл *select an object* из *Selectors* 
     </p>
 
-    <img src="files/beginner_guide/puzzles-toolbox2.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/puzzles-toolbox2.jpg" class="centered">
 
     <p>
       После объединения, приложение будет ждать клика пользователя по объекту, который был указан в раскрывающемся меню (например, "Cube"). При этом никакого действия в ответ происходить не будет, пока вы не добавите что-то в слот *do*. 
@@ -190,13 +190,13 @@
       Теперь, когда пользователь кликнет по 3D объекту, он исчезнет. Нажмите кнопку *Run*, чтобы запустить программу. Для проверки, щелкните по кубу.
     </p>
 
-    <img src="files/beginner_guide/puzzles-run.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/puzzles-run.jpg" class="centered">
 
     <p>
       Чтобы сделать сценарий постоянной частью приложения, обязательно сохраните его. 
     </p>
 
-    <img src="files/beginner_guide/puzzles-save.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginner_guide/puzzles-save.jpg" class="centered">
 
     <p>
       Закончив с пазлами, вы можете запустить интерактивное приложение, используя синюю иконку в App Manager. 
@@ -252,7 +252,7 @@
 
     <img src="files/beginners-guide-maya/license-key-example.jpg" class="centered" style="max-width: 900px">
 
-    <img src="files/beginners-guide-maya/app-manager-license-activation.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/beginners-guide-maya/app-manager-license-activation.jpg" class="centered">
 
     <p>
       Лицензионный ключ активирует ваш экземпляр Verge3D и удалит водяной знак со всех приложений.
