--- a/manual/ru/puzzles/Lists.html
+++ b/manual/ru/puzzles/Lists.html
@@ -16,7 +16,7 @@
     Список - это упорядоченная коллекция элементов, например, список "to do" или список покупок. Элементы в списке могут быть любого типа, и одно и то же значение может появляться в списке несколько раз.
     </p>
 
-    <img src="files/puzzles/puzzles-lists.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists.jpg">
 
     <h2>Содержание</h2>
 
@@ -45,19 +45,19 @@
     Этот пазл позволяет создать новый список и указать начальные значения. Дополнительные исходные данные добавляются путем перетаскивания блока *item* из серой панели инструментов слева в блок *list*.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-create.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-create.jpg">
 
     <p>
     Следующий пример скрывает все 3 объекта, указанные в списке, как только пользователь щелкает на кубе.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-create-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-create-example.jpg">
 
     <p>
     Списки могут быть вложенными (например, список списков) или не иметь записей, указанных в какой-либо из позиций. В последнем случае в пропущенную позицию автоматически помещается значение <a href="manual/ru/puzzles/Logic.html#null">null</a>.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-create-example2.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-create-example2.jpg">
 
 
 
@@ -69,13 +69,13 @@
     Этот пазл подсчитывает количество элементов в указанном списке. Значения <a href="manual/ru/puzzles/Logic.html#null">null</a>, автоматически вставленные в пропущенные позиции, также будут подсчитаны.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-length.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-length.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-length-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-length-example.jpg">
 
 
 
@@ -87,13 +87,13 @@
     Этот пазл извлекает (и/или удаляет) элемент с указанной позиции (элементы в списке индексируются, начиная с 0).
     </p>
 
-    <img src="files/puzzles/puzzles-lists-get-remove.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-get-remove.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-get-remove-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-get-remove-example.jpg">
 
 
 
@@ -105,13 +105,13 @@
     Этот пазл позволяет добавлять элементы в список. Вариант *set* заменяет элемент на указанной позиции в списке другим элементом (длина списка остается прежней). Вариант *insert* добавляет новый элемент в список на указанную позицию, смещая элемент, находившийся ранее на этой позиции (тем самым увеличивая длину списка). Помните, что элементы в списке индексируются, начиная с 0.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-set-insert.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-set-insert.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-set-insert-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-set-insert-example.jpg">
 
 
 
@@ -123,13 +123,13 @@
     Этот пазл создает новый пустой список, который будет заполнен элементами позже.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-create-empty.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-create-empty.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-create-empty-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-create-empty-example.jpg">
 
 
 
@@ -141,13 +141,13 @@
     Этот пазл создает новый список и инициализирует все позиции с одним и тем же заданным элементом. Основное отличие от варианта *create empty* в том, что список инициализируется с заранее определенной длиной и с некоторыми начальными значениями.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-create-with-item-repeated.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-create-with-item-repeated.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-create-with-item-repeated-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-create-with-item-repeated-example.jpg">
 
 
 
@@ -159,13 +159,13 @@
     Этот пазл создает <i>новый список</i>, заполненный элементами из исходного списка в обратном порядке. Исходный список не будет изменен.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-reverse.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-reverse.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-reverse-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-reverse-example.jpg">
 
 
 
@@ -177,13 +177,13 @@
     Этот пазл проверяет, не содержит ли заданный список элементов, и выдает *true* в этом случае, или *false* в противном. Для использования с пазлами <a href='manual/ru/puzzles/Logic.html'>Логики</a>.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-is-empty.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-is-empty.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-is-empty-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-is-empty-example.jpg">
 
 
 
@@ -195,13 +195,13 @@
     Этот пазл может быть использован для проверки того, содержится ли элемент в списке и, если да, то где он находится. Если элемент найден, то выдается его позиция (элементы в списке индексируются, начиная с 0). Если элемент не найден, пазл возвращает -1.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-find.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-find.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-find-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-find-example.jpg">
 
 
     [anchor:check_item]
@@ -223,13 +223,13 @@
     Этот пазл позволяет извлечь область списка между двумя указанными позициями в качестве нового списка (элементы в списке индексируются, начиная с 0). Исходный список при этом не изменяется.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-get-sub-list.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-get-sub-list.jpg">
 
     <p>
     Пример:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-get-sub-list-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-get-sub-list-example.jpg">
 
 
 
@@ -241,13 +241,13 @@
     Этот пазл создает <i>новый список</i>, заполненный элементами из исходного списка, отсортированными в порядке возрастания или убывания. Исходный список не будет изменен.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-sort.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-sort.jpg">
 
     <p>
     Примеры:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-sort-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-sort-example.jpg">
 
 
 
@@ -259,19 +259,19 @@
     Этот пазл позволяет создать список, разделив некоторый текст, или сделать обратное - объединить элементы списка в строку текста.
     </p>
 
-    <img src="files/puzzles/puzzles-lists-list-text-conversion.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-list-text-conversion.jpg">
 
     <p>
     Пример разбивки текста в список:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-list-text-conversion-example.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-list-text-conversion-example.jpg">
 
     <p>
     Пример объединения списка в текст:
     </p>
 
-    <img src="files/puzzles/puzzles-lists-list-text-conversion-example2.jpg" style="max-width: 1000px">
+    <img src="files/puzzles/puzzles-lists-list-text-conversion-example2.jpg">
 
 
     [anchor:see_also]
