--- a/manual/zh/blender/Material-Library.html
+++ b/manual/zh/blender/Material-Library.html
@@ -32,7 +32,7 @@
 
     <h2>向项目添加材质</h2>
 
-    <p>要在项目中使用这些材质，请打开<b>文件/附加(File/Appen<b>d</b>)</b>对话框。</p><img src="files/mat-library-blender/append-material.jpg" class="centered" style="max-width: 835px"><p>然后导航到材质库文件夹，点击打开带有要添加的材质的*blend*文件。</p><img src="files/mat-library-blender/append-material2.jpg" class="centered" style="max-width: 835px"><p>打开“Material”文件夹...</p><img src="files/mat-library-blender/append-material3.jpg" class="centered" style="max-width: 835px"><p>...选择材质，然后单击“追加”按钮。</p><img src="files/mat-library-blender/append-material4.jpg" class="centered" style="max-width: 1000px"><p>材质被追加后，您即可将其指定给模型了。选择一个模型，转到 *材质属性* 选项卡，点击材质名称附近的小按钮（若还没有分配材质，则点击 *新建* 按钮），然后从列表中选择刚才附加的材质。</p><img src="files/mat-library-blender/assign-material.jpg" class="centered" style="max-width: 835px">
+    <p>要在项目中使用这些材质，请打开<b>文件/附加(File/Appen<b>d</b>)</b>对话框。</p><img src="files/mat-library-blender/append-material.jpg" class="centered" style="max-width: 835px"><p>然后导航到材质库文件夹，点击打开带有要添加的材质的*blend*文件。</p><img src="files/mat-library-blender/append-material2.jpg" class="centered" style="max-width: 835px"><p>打开“Material”文件夹...</p><img src="files/mat-library-blender/append-material3.jpg" class="centered" style="max-width: 835px"><p>...选择材质，然后单击“追加”按钮。</p><img src="files/mat-library-blender/append-material4.jpg" class="centered"><p>材质被追加后，您即可将其指定给模型了。选择一个模型，转到 *材质属性* 选项卡，点击材质名称附近的小按钮（若还没有分配材质，则点击 *新建* 按钮），然后从列表中选择刚才附加的材质。</p><img src="files/mat-library-blender/assign-material.jpg" class="centered" style="max-width: 835px">
 
     [anchor:Setting_up_the_Environment]
 
@@ -55,7 +55,7 @@
 
     <h2>配置材质</h2>
 
-    <p>大多数着色器提供了一组可调整的输入节点，您可以创建一个符合需要的独特材质。</p><img src="files/mat-library-blender/material-settings.jpg" class="centered" style="max-width: 1000px"><p>除此之外，还有一些特殊的输入节点，可以方便地连接烘焙好的法线贴图与AO贴图。</p>
+    <p>大多数着色器提供了一组可调整的输入节点，您可以创建一个符合需要的独特材质。</p><img src="files/mat-library-blender/material-settings.jpg" class="centered"><p>除此之外，还有一些特殊的输入节点，可以方便地连接烘焙好的法线贴图与AO贴图。</p>
 
     [anchor:Image_Resolution]
 
@@ -71,7 +71,7 @@
 
     <p>打开Blender中的 *图像编辑器* （或 *UV编辑器*  )。从下拉菜单中选择一个纹理，并检查其文件路径。</p><img src="files/mat-library-blender/texture-file-paths.jpg" class="centered" style="max-width: 909px"><p>如果纹理看起来是从材质库文件夹中引用的，请使用 *图像 / 另存* 菜单重新保存到应用文件夹中。</p><img src="files/mat-library-blender/texture-file-paths2.jpg" class="centered" style="max-width: 909px"><p>搜索材质库的其他纹理，重复此操作，直到所有的纹理都被重新定位。</p>
 
-    <p>您可以通过将应用的文件夹移动到文件系统中的另一个位置来检查应用的完整性。打开 *blend* 文件并调用 *文件 / 外部数据 / 报告缺失的文件* 菜单。</p><img src="files/mat-library-blender/texture-file-paths3.jpg" class="centered" style="max-width: 835px"><p>如果 *blend* 文件中使用的任何纹理有缺失，在视口底部会显示黄色高亮的警告信息。</p><img src="files/mat-library-blender/texture-file-paths4.jpg" class="centered" style="max-width: 1000px"><h2>遇到问题？</h2>
+    <p>您可以通过将应用的文件夹移动到文件系统中的另一个位置来检查应用的完整性。打开 *blend* 文件并调用 *文件 / 外部数据 / 报告缺失的文件* 菜单。</p><img src="files/mat-library-blender/texture-file-paths3.jpg" class="centered" style="max-width: 835px"><p>如果 *blend* 文件中使用的任何纹理有缺失，在视口底部会显示黄色高亮的警告信息。</p><img src="files/mat-library-blender/texture-file-paths4.jpg" class="centered"><h2>遇到问题？</h2>
 
     <p>欢迎您随时在 <a href="https://www.soft8soft.com/forums/" target="_blank">论坛</a>上提问！您还可以加入中文用户社区<a href="https://shang.qq.com/wpa/qunwpa?idkey=c31cf6597f3ed7ce68bd47aba6bba23049bf973ac6acc59b0a5a7d1bd933b3ea" target="_blank">QQ群(171678760)</a>，在线寻求帮助。</p>
 
