--- a/manual/zh/maya/Animation.html
+++ b/manual/zh/maya/Animation.html
@@ -67,7 +67,7 @@
     <p>您还可以使用拼图或JavaScript来随着时间修改坐标或其他参数的方式制作动画，而不仅仅是回放在Maya中预制作好的动画。特别是（基于tween.js库）的 <a
         href="manual/zh/puzzles/Animation.html#animate_param">animate param(动画参数)</a> 拼图，是一种自己的简单快捷地创作动画的方法。</p><img
       src="files/puzzles/puzzles-animation-animate-param.jpg" alt="使用动画参数拼图在Verge3D for Maya中创建动画" class="centered"
-      style="max-width: 1000px">
+     >
 
     [anchor:Playback_Options]
 
@@ -127,7 +127,7 @@
     <h2>使用拼图控制动画</h2>
 
     <p>您可以使用 <a href="manual/zh/puzzles/Animation.html">动画拼图</a> 来回放一个预先制作好的动画（点击链接了解详情）。</p><img
-      src="files/puzzles/puzzles-animation.jpg" alt="Verge3D动画拼图" class="centered" style="max-width: 1000px">
+      src="files/puzzles/puzzles-animation.jpg" alt="Verge3D动画拼图" class="centered">
     <p>动画也可以用其他可视化脚本块来实现。请参阅 <a href="manual/zh/puzzles/Camera.html">摄影机</a> 和 <a
         href="manual/zh/puzzles/Time.html">时间</a> 拼图。</p>
 
